@@ -29,7 +29,6 @@ import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.Hashtable;
-import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
@@ -236,12 +235,6 @@ public class JNDIRealm extends RealmBase {
 
 
     /**
-     * Descriptive information about this Realm implementation.
-     */
-    protected static final String name = "JNDIRealm";
-
-
-    /**
      * The protocol that will be used in the communication with the
      * directory server.
      */
@@ -424,6 +417,12 @@ public class JNDIRealm extends RealmBase {
     protected String connectionTimeout = "5000";
 
     /**
+     * The timeout, in milliseconds, to use when trying to read from a connection
+     * to the directory. The default is 5000 (5 seconds).
+     */
+    protected String readTimeout = "5000";
+
+    /**
      * The sizeLimit (also known as the countLimit) to use when the realm is
      * configured with {@link #userSearch}. Zero for no limit.
      */
@@ -501,7 +500,7 @@ public class JNDIRealm extends RealmBase {
     // ------------------------------------------------------------- Properties
 
     /**
-     * Return the type of authentication to use.
+     * @return the type of authentication to use.
      */
     public String getAuthentication() {
 
@@ -521,11 +520,11 @@ public class JNDIRealm extends RealmBase {
     }
 
     /**
-     * Return the connection username for this Realm.
+     * @return the connection username for this Realm.
      */
     public String getConnectionName() {
 
-        return (this.connectionName);
+        return this.connectionName;
 
     }
 
@@ -543,11 +542,11 @@ public class JNDIRealm extends RealmBase {
 
 
     /**
-     * Return the connection password for this Realm.
+     * @return the connection password for this Realm.
      */
     public String getConnectionPassword() {
 
-        return (this.connectionPassword);
+        return this.connectionPassword;
 
     }
 
@@ -565,11 +564,11 @@ public class JNDIRealm extends RealmBase {
 
 
     /**
-     * Return the connection URL for this Realm.
+     * @return the connection URL for this Realm.
      */
     public String getConnectionURL() {
 
-        return (this.connectionURL);
+        return this.connectionURL;
 
     }
 
@@ -587,11 +586,11 @@ public class JNDIRealm extends RealmBase {
 
 
     /**
-     * Return the JNDI context factory for this Realm.
+     * @return the JNDI context factory for this Realm.
      */
     public String getContextFactory() {
 
-        return (this.contextFactory);
+        return this.contextFactory;
 
     }
 
@@ -608,7 +607,7 @@ public class JNDIRealm extends RealmBase {
     }
 
     /**
-     * Return the derefAliases setting to be used.
+     * @return the derefAliases setting to be used.
      */
     public java.lang.String getDerefAliases() {
         return derefAliases;
@@ -624,7 +623,7 @@ public class JNDIRealm extends RealmBase {
     }
 
     /**
-     * Return the protocol to be used.
+     * @return the protocol to be used.
      */
     public String getProtocol() {
 
@@ -645,7 +644,7 @@ public class JNDIRealm extends RealmBase {
 
 
     /**
-     * Returns the current settings for handling PartialResultExceptions
+     * @return the current settings for handling PartialResultExceptions
      */
     public boolean getAdCompat () {
         return adCompat;
@@ -655,6 +654,7 @@ public class JNDIRealm extends RealmBase {
     /**
      * How do we handle PartialResultExceptions?
      * True: ignore all PartialResultExceptions.
+     * @param adCompat <code>true</code> to ignore partial results
      */
     public void setAdCompat (boolean adCompat) {
         this.adCompat = adCompat;
@@ -662,7 +662,7 @@ public class JNDIRealm extends RealmBase {
 
 
     /**
-     * Returns the current settings for handling JNDI referrals.
+     * @return the current settings for handling JNDI referrals.
      */
     public String getReferrals () {
         return referrals;
@@ -672,6 +672,7 @@ public class JNDIRealm extends RealmBase {
     /**
      * How do we handle JNDI referrals? ignore, follow, or throw
      * (see javax.naming.Context.REFERRAL for more information).
+     * @param referrals The referral handling
      */
     public void setReferrals (String referrals) {
         this.referrals = referrals;
@@ -679,11 +680,11 @@ public class JNDIRealm extends RealmBase {
 
 
     /**
-     * Return the base element for user searches.
+     * @return the base element for user searches.
      */
     public String getUserBase() {
 
-        return (this.userBase);
+        return this.userBase;
 
     }
 
@@ -701,11 +702,11 @@ public class JNDIRealm extends RealmBase {
 
 
     /**
-     * Return the message format pattern for selecting users in this Realm.
+     * @return the message format pattern for selecting users in this Realm.
      */
     public String getUserSearch() {
 
-        return (this.userSearch);
+        return this.userSearch;
 
     }
 
@@ -737,11 +738,11 @@ public class JNDIRealm extends RealmBase {
 
 
     /**
-     * Return the "search subtree for users" flag.
+     * @return the "search subtree for users" flag.
      */
     public boolean getUserSubtree() {
 
-        return (this.userSubtree);
+        return this.userSubtree;
 
     }
 
@@ -759,7 +760,7 @@ public class JNDIRealm extends RealmBase {
 
 
     /**
-     * Return the user role name attribute name for this Realm.
+     * @return the user role name attribute name for this Realm.
      */
     public String getUserRoleName() {
 
@@ -780,11 +781,11 @@ public class JNDIRealm extends RealmBase {
 
 
     /**
-     * Return the base element for role searches.
+     * @return the base element for role searches.
      */
     public String getRoleBase() {
 
-        return (this.roleBase);
+        return this.roleBase;
 
     }
 
@@ -806,11 +807,11 @@ public class JNDIRealm extends RealmBase {
 
 
     /**
-     * Return the role name attribute name for this Realm.
+     * @return the role name attribute name for this Realm.
      */
     public String getRoleName() {
 
-        return (this.roleName);
+        return this.roleName;
 
     }
 
@@ -828,11 +829,11 @@ public class JNDIRealm extends RealmBase {
 
 
     /**
-     * Return the message format pattern for selecting roles in this Realm.
+     * @return the message format pattern for selecting roles in this Realm.
      */
     public String getRoleSearch() {
 
-        return (this.roleSearch);
+        return this.roleSearch;
 
     }
 
@@ -864,11 +865,11 @@ public class JNDIRealm extends RealmBase {
 
 
     /**
-     * Return the "search subtree for roles" flag.
+     * @return the "search subtree for roles" flag.
      */
     public boolean getRoleSubtree() {
 
-        return (this.roleSubtree);
+        return this.roleSubtree;
 
     }
 
@@ -885,11 +886,11 @@ public class JNDIRealm extends RealmBase {
     }
 
     /**
-     * Return the "The nested group search flag" flag.
+     * @return the "The nested group search flag" flag.
      */
     public boolean getRoleNested() {
 
-        return (this.roleNested);
+        return this.roleNested;
 
     }
 
@@ -907,11 +908,11 @@ public class JNDIRealm extends RealmBase {
 
 
     /**
-     * Return the password attribute used to retrieve the user password.
+     * @return the password attribute used to retrieve the user password.
      */
     public String getUserPassword() {
 
-        return (this.userPassword);
+        return this.userPassword;
 
     }
 
@@ -937,11 +938,11 @@ public class JNDIRealm extends RealmBase {
     }
 
     /**
-     * Return the message format pattern for selecting users in this Realm.
+     * @return the message format pattern for selecting users in this Realm.
      */
     public String getUserPattern() {
 
-        return (this.userPattern);
+        return this.userPattern;
 
     }
 
@@ -1000,7 +1001,7 @@ public class JNDIRealm extends RealmBase {
 
 
     /**
-     * Return the common role
+     * @return the common role
      */
     public String getCommonRole() {
 
@@ -1022,7 +1023,7 @@ public class JNDIRealm extends RealmBase {
 
 
     /**
-     * Return the connection timeout.
+     * @return the connection timeout.
      */
     public String getConnectionTimeout() {
 
@@ -1039,6 +1040,27 @@ public class JNDIRealm extends RealmBase {
     public void setConnectionTimeout(String timeout) {
 
         this.connectionTimeout = timeout;
+
+    }
+
+    /**
+     * @return the read timeout.
+     */
+    public String getReadTimeout() {
+
+        return readTimeout;
+
+    }
+
+
+    /**
+     * Set the read timeout.
+     *
+     * @param timeout The new read timeout
+     */
+    public void setReadTimeout(String timeout) {
+
+        this.readTimeout = timeout;
 
     }
 
@@ -1113,7 +1135,7 @@ public class JNDIRealm extends RealmBase {
         } else {
             this.cipherSuitesArray = cipherSuites.trim().split("\\s*,\\s*");
             containerLog.debug(sm.getString("jndiRealm.cipherSuites",
-                    Arrays.asList(this.cipherSuitesArray)));
+                    Arrays.toString(this.cipherSuitesArray)));
         }
         return this.cipherSuitesArray;
     }
@@ -1179,8 +1201,7 @@ public class JNDIRealm extends RealmBase {
                         "jndiRealm.invalidHostnameVerifier",
                         hostNameVerifierClassName));
             }
-        } catch (ClassNotFoundException | SecurityException
-                | InstantiationException | IllegalAccessException e) {
+        } catch (ReflectiveOperationException | SecurityException e) {
             throw new IllegalArgumentException(sm.getString(
                     "jndiRealm.invalidHostnameVerifier",
                     hostNameVerifierClassName), e);
@@ -1224,10 +1245,9 @@ public class JNDIRealm extends RealmBase {
     }
 
     private Object constructInstance(String className)
-            throws ClassNotFoundException, InstantiationException,
-            IllegalAccessException {
+            throws ReflectiveOperationException {
         Class<?> clazz = Class.forName(className);
-        return clazz.newInstance();
+        return clazz.getConstructor().newInstance();
     }
 
     // ---------------------------------------------------------- Realm Methods
@@ -1244,6 +1264,7 @@ public class JNDIRealm extends RealmBase {
      * @param username Username of the Principal to look up
      * @param credentials Password or other credentials to use in
      *  authenticating this username
+     * @return the associated principal, or <code>null</code> if there is none.
      */
     @Override
     public Principal authenticate(String username, String credentials) {
@@ -1256,31 +1277,28 @@ public class JNDIRealm extends RealmBase {
             // Ensure that we have a directory context available
             context = open();
 
-            // Occassionally the directory context will timeout.  Try one more
+            // Occasionally the directory context will timeout.  Try one more
             // time before giving up.
             try {
 
                 // Authenticate the specified username if possible
                 principal = authenticate(context, username, credentials);
 
-            } catch (NullPointerException e) {
-                /* BZ 42449 - Kludge Sun's LDAP provider
-                   with broken SSL
-                */
-                // log the exception so we know it's there.
-                containerLog.info(sm.getString("jndiRealm.exception.retry"), e);
+            } catch (NullPointerException | NamingException e) {
+                /*
+                 * BZ 61313
+                 * NamingException may or may not indicate an error that is
+                 * recoverable via fail over. Therefore a decision needs to be
+                 * made whether to fail over or not. Generally, attempting to
+                 * fail over when it is not appropriate is better than not
+                 * failing over when it is appropriate so the code always
+                 * attempts to fail over for NamingExceptions.
+                 */
 
-                // close the connection so we know it will be reopened.
-                if (context != null)
-                    close(context);
-
-                // open a new directory context.
-                context = open();
-
-                // Try the authentication again.
-                principal = authenticate(context, username, credentials);
-
-            } catch (CommunicationException e) {
+                /*
+                 * BZ 42449
+                 * Catch NPE - Kludge Sun's LDAP provider with broken SSL.
+                 */
 
                 // log the exception so we know it's there.
                 containerLog.info(sm.getString("jndiRealm.exception.retry"), e);
@@ -1294,22 +1312,6 @@ public class JNDIRealm extends RealmBase {
 
                 // Try the authentication again.
                 principal = authenticate(context, username, credentials);
-
-            } catch (ServiceUnavailableException e) {
-
-                // log the exception so we know it's there.
-                containerLog.info(sm.getString("jndiRealm.exception.retry"), e);
-
-                // close the connection so we know it will be reopened.
-                if (context != null)
-                    close(context);
-
-                // open a new directory context.
-                context = open();
-
-                // Try the authentication again.
-                principal = authenticate(context, username, credentials);
-
             }
 
 
@@ -1317,7 +1319,7 @@ public class JNDIRealm extends RealmBase {
             release(context);
 
             // Return the authenticated Principal (if any)
-            return (principal);
+            return principal;
 
         } catch (NamingException e) {
 
@@ -1331,7 +1333,7 @@ public class JNDIRealm extends RealmBase {
             // Return "not authenticated" for this request
             if (containerLog.isDebugEnabled())
                 containerLog.debug("Returning null principal.");
-            return (null);
+            return null;
 
         }
 
@@ -1352,6 +1354,7 @@ public class JNDIRealm extends RealmBase {
      * @param username Username of the Principal to look up
      * @param credentials Password or other credentials to use in
      *  authenticating this username
+     * @return the associated principal, or <code>null</code> if there is none.
      *
      * @exception NamingException if a directory server error occurs
      */
@@ -1364,7 +1367,7 @@ public class JNDIRealm extends RealmBase {
             || credentials == null || credentials.equals("")) {
             if (containerLog.isDebugEnabled())
                 containerLog.debug("username null or empty: returning null principal.");
-            return (null);
+            return null;
         }
 
         if (userPatternArray != null) {
@@ -1380,15 +1383,9 @@ public class JNDIRealm extends RealmBase {
                             // Search for additional roles
                             List<String> roles = getRoles(context, user);
                             if (containerLog.isDebugEnabled()) {
-                                Iterator<String> it = roles.iterator();
-                                // TODO: Use a single log message
-                                while (it.hasNext()) {
-                                    containerLog.debug("Found role: " + it.next());
-                                }
+                                containerLog.debug("Found roles: " + roles.toString());
                             }
-                            return (new GenericPrincipal(username,
-                                                         credentials,
-                                                         roles));
+                            return new GenericPrincipal(username, credentials, roles);
                         }
                     } catch (InvalidNameException ine) {
                         // Log the problem for posterity
@@ -1405,24 +1402,20 @@ public class JNDIRealm extends RealmBase {
             // Retrieve user information
             User user = getUser(context, username, credentials);
             if (user == null)
-                return (null);
+                return null;
 
             // Check the user's credentials
             if (!checkCredentials(context, user, credentials))
-                return (null);
+                return null;
 
             // Search for additional roles
             List<String> roles = getRoles(context, user);
             if (containerLog.isDebugEnabled()) {
-                Iterator<String> it = roles.iterator();
-                // TODO: Use a single log message
-                while (it.hasNext()) {
-                    containerLog.debug("Found role: " + it.next());
-                }
+                containerLog.debug("Found roles: " + roles.toString());
             }
 
             // Create and return a suitable Principal for this user
-            return (new GenericPrincipal(username, credentials, roles));
+            return new GenericPrincipal(username, credentials, roles);
         }
     }
 
@@ -1434,7 +1427,7 @@ public class JNDIRealm extends RealmBase {
      *
      * @param context The directory context
      * @param username Username to be looked up
-     *
+     * @return the User object
      * @exception NamingException if a directory server error occurs
      *
      * @see #getUser(DirContext, String, String, int)
@@ -1454,7 +1447,7 @@ public class JNDIRealm extends RealmBase {
      * @param context The directory context
      * @param username Username to be looked up
      * @param credentials User credentials (optional)
-     *
+     * @return the User object
      * @exception NamingException if a directory server error occurs
      *
      * @see #getUser(DirContext, String, String, int)
@@ -1481,7 +1474,7 @@ public class JNDIRealm extends RealmBase {
      * @param username Username to be looked up
      * @param credentials User credentials (optional)
      * @param curUserPattern Index into userPatternFormatArray
-     *
+     * @return the User object
      * @exception NamingException if a directory server error occurs
      */
     protected User getUser(DirContext context, String username,
@@ -1491,7 +1484,7 @@ public class JNDIRealm extends RealmBase {
         User user = null;
 
         // Get attributes to retrieve from user entry
-        ArrayList<String> list = new ArrayList<>();
+        List<String> list = new ArrayList<>();
         if (userPassword != null)
             list.add(userPassword);
         if (userRoleName != null)
@@ -1546,7 +1539,7 @@ public class JNDIRealm extends RealmBase {
      * @param attrIds String[]containing names of attributes to
      * @param dn Distinguished name of the user
      * retrieve.
-     *
+     * @return the User object
      * @exception NamingException if a directory server error occurs
      */
     protected User getUserByPattern(DirContext context,
@@ -1565,10 +1558,10 @@ public class JNDIRealm extends RealmBase {
         try {
             attrs = context.getAttributes(dn, attrIds);
         } catch (NameNotFoundException e) {
-            return (null);
+            return null;
         }
         if (attrs == null)
-            return (null);
+            return null;
 
         // Retrieve value of userPassword
         String password = null;
@@ -1600,7 +1593,7 @@ public class JNDIRealm extends RealmBase {
      * @param credentials User credentials (optional)
      * @param attrIds String[]containing names of attributes to
      * @param curUserPattern Index into userPatternFormatArray
-     *
+     * @return the User object
      * @exception NamingException if a directory server error occurs
      * @see #getUserByPattern(DirContext, String, String[], String)
      */
@@ -1614,7 +1607,7 @@ public class JNDIRealm extends RealmBase {
         User user = null;
 
         if (username == null || userPatternFormatArray[curUserPattern] == null)
-            return (null);
+            return null;
 
         // Form the dn from the user pattern
         String dn = userPatternFormatArray[curUserPattern].format(new String[] { username });
@@ -1622,7 +1615,7 @@ public class JNDIRealm extends RealmBase {
         try {
             user = getUserByPattern(context, username, attrIds, dn);
         } catch (NameNotFoundException e) {
-            return (null);
+            return null;
         } catch (NamingException e) {
             // If the getUserByPattern() call fails, try it again with the
             // credentials of the user that we're searching for
@@ -1646,7 +1639,7 @@ public class JNDIRealm extends RealmBase {
      * @param context The directory context
      * @param username The username
      * @param attrIds String[]containing names of attributes to retrieve.
-     *
+     * @return the User object
      * @exception NamingException if a directory server error occurs
      */
     protected User getUserBySearch(DirContext context,
@@ -1655,7 +1648,7 @@ public class JNDIRealm extends RealmBase {
         throws NamingException {
 
         if (username == null || userSearchFormat == null)
-            return (null);
+            return null;
 
         // Form the search filter
         String filter = userSearchFormat.format(new String[] { username });
@@ -1681,60 +1674,65 @@ public class JNDIRealm extends RealmBase {
         NamingEnumeration<SearchResult> results =
             context.search(userBase, filter, constraints);
 
-
-        // Fail if no entries found
         try {
-            if (results == null || !results.hasMore()) {
-                return (null);
+            // Fail if no entries found
+            try {
+                if (results == null || !results.hasMore()) {
+                    return null;
+                }
+            } catch (PartialResultException ex) {
+                if (!adCompat)
+                    throw ex;
+                else
+                    return null;
             }
-        } catch (PartialResultException ex) {
-            if (!adCompat)
-                throw ex;
-            else
-                return (null);
-        }
 
-        // Get result for the first entry found
-        SearchResult result = results.next();
+            // Get result for the first entry found
+            SearchResult result = results.next();
 
-        // Check no further entries were found
-        try {
-            if (results.hasMore()) {
-                if(containerLog.isInfoEnabled())
-                    containerLog.info("username " + username + " has multiple entries");
-                return (null);
+            // Check no further entries were found
+            try {
+                if (results.hasMore()) {
+                    if(containerLog.isInfoEnabled())
+                        containerLog.info("username " + username + " has multiple entries");
+                    return null;
+                }
+            } catch (PartialResultException ex) {
+                if (!adCompat)
+                    throw ex;
             }
-        } catch (PartialResultException ex) {
-            if (!adCompat)
-                throw ex;
+
+            String dn = getDistinguishedName(context, userBase, result);
+
+            if (containerLog.isTraceEnabled())
+                containerLog.trace("  entry found for " + username + " with dn " + dn);
+
+            // Get the entry's attributes
+            Attributes attrs = result.getAttributes();
+            if (attrs == null)
+                return null;
+
+            // Retrieve value of userPassword
+            String password = null;
+            if (userPassword != null)
+                password = getAttributeValue(userPassword, attrs);
+
+            String userRoleAttrValue = null;
+            if (userRoleAttribute != null) {
+                userRoleAttrValue = getAttributeValue(userRoleAttribute, attrs);
+            }
+
+            // Retrieve values of userRoleName attribute
+            ArrayList<String> roles = null;
+            if (userRoleName != null)
+                roles = addAttributeValues(userRoleName, attrs, roles);
+
+            return new User(username, dn, password, roles, userRoleAttrValue);
+        } finally {
+            if (results != null) {
+                results.close();
+            }
         }
-
-        String dn = getDistinguishedName(context, userBase, result);
-
-        if (containerLog.isTraceEnabled())
-            containerLog.trace("  entry found for " + username + " with dn " + dn);
-
-        // Get the entry's attributes
-        Attributes attrs = result.getAttributes();
-        if (attrs == null)
-            return null;
-
-        // Retrieve value of userPassword
-        String password = null;
-        if (userPassword != null)
-            password = getAttributeValue(userPassword, attrs);
-
-        String userRoleAttrValue = null;
-        if (userRoleAttribute != null) {
-            userRoleAttrValue = getAttributeValue(userRoleAttribute, attrs);
-        }
-
-        // Retrieve values of userRoleName attribute
-        ArrayList<String> roles = null;
-        if (userRoleName != null)
-            roles = addAttributeValues(userRoleName, attrs, roles);
-
-        return new User(username, dn, password, roles, userRoleAttrValue);
     }
 
 
@@ -1750,7 +1748,7 @@ public class JNDIRealm extends RealmBase {
      * @param context The directory context
      * @param user The User to be authenticated
      * @param credentials The credentials presented by the user
-     *
+     * @return <code>true</code> if the credentials are validated
      * @exception NamingException if a directory server error occurs
      */
     protected boolean checkCredentials(DirContext context,
@@ -1775,7 +1773,7 @@ public class JNDIRealm extends RealmBase {
                                   user.getUserName()));
              }
          }
-         return (validated);
+         return validated;
      }
 
 
@@ -1786,7 +1784,7 @@ public class JNDIRealm extends RealmBase {
      * @param context The directory context
      * @param info The User to be authenticated
      * @param credentials Authentication credentials
-     *
+     * @return <code>true</code> if the credentials are validated
      * @exception NamingException if a directory server error occurs
      */
     protected boolean compareCredentials(DirContext context,
@@ -1813,7 +1811,7 @@ public class JNDIRealm extends RealmBase {
      * @param context The directory context
      * @param user The User to be authenticated
      * @param credentials Authentication credentials
-     *
+     * @return <code>true</code> if the credentials are validated
      * @exception NamingException if a directory server error occurs
      */
      protected boolean bindAsUser(DirContext context,
@@ -1852,7 +1850,7 @@ public class JNDIRealm extends RealmBase {
 
         userCredentialsRemove(context);
 
-        return (validated);
+        return validated;
     }
 
      /**
@@ -1862,6 +1860,7 @@ public class JNDIRealm extends RealmBase {
       * @param context      DirContext to configure
       * @param dn           Distinguished name of user
       * @param credentials  Credentials of user
+      * @exception NamingException if a directory server error occurs
       */
     private void userCredentialsAdd(DirContext context, String dn,
             String credentials) throws NamingException {
@@ -1876,6 +1875,7 @@ public class JNDIRealm extends RealmBase {
      * those attributes are not specified.
      *
       * @param context      DirContext to configure
+      * @exception NamingException if a directory server error occurs
      */
     private void userCredentialsRemove(DirContext context)
             throws NamingException {
@@ -1904,21 +1904,21 @@ public class JNDIRealm extends RealmBase {
      *
      * @param context The directory context we are searching
      * @param user The User to be checked
-     *
+     * @return the list of role names
      * @exception NamingException if a directory server error occurs
      */
     protected List<String> getRoles(DirContext context, User user)
         throws NamingException {
 
         if (user == null)
-            return (null);
+            return null;
 
         String dn = user.getDN();
         String username = user.getUserName();
         String userRoleId = user.getUserRoleId();
 
         if (dn == null || username == null)
-            return (null);
+            return null;
 
         if (containerLog.isTraceEnabled())
             containerLog.trace("  getRoles(" + dn + ")");
@@ -1934,13 +1934,12 @@ public class JNDIRealm extends RealmBase {
 
         if (containerLog.isTraceEnabled()) {
             containerLog.trace("  Found " + list.size() + " user internal roles");
-            for (int i=0; i<list.size(); i++)
-                containerLog.trace(  "  Found user internal role " + list.get(i));
+            containerLog.trace("  Found user internal roles " + list.toString());
         }
 
         // Are we configured to do role searches?
         if ((roleFormat == null) || (roleName == null))
-            return (list);
+            return list;
 
         // Set up parameters for an appropriate search
         String filter = roleFormat.format(new String[] { doRFC2254Encoding(dn), username, userRoleId });
@@ -1965,23 +1964,13 @@ public class JNDIRealm extends RealmBase {
         }
 
         // Perform the configured search and process the results
-        NamingEnumeration<SearchResult> results = null;
-        boolean thisRoleSearchAsUser = isRoleSearchAsUser();
-        try {
-            if (thisRoleSearchAsUser) {
-                userCredentialsAdd(context, dn, user.getPassword());
-            }
-            results = context.search(base, filter, controls);
-        } finally {
-            if (thisRoleSearchAsUser) {
-                userCredentialsRemove(context);
-            }
-        }
+        NamingEnumeration<SearchResult> results = searchAsUser(context, user, base, filter, controls,
+                isRoleSearchAsUser());
 
         if (results == null)
-            return (list);  // Should never happen, but just in case ...
+            return list;  // Should never happen, but just in case ...
 
-        HashMap<String, String> groupMap = new HashMap<>();
+        Map<String, String> groupMap = new HashMap<>();
         try {
             while (results.hasMore()) {
                 SearchResult result = results.next();
@@ -1997,13 +1986,15 @@ public class JNDIRealm extends RealmBase {
         } catch (PartialResultException ex) {
             if (!adCompat)
                 throw ex;
+        } finally {
+            results.close();
         }
 
-        Set<String> keys = groupMap.keySet();
         if (containerLog.isTraceEnabled()) {
-            containerLog.trace("  Found " + keys.size() + " direct roles");
-            for (String key: keys) {
-                containerLog.trace(  "  Found direct role " + key + " -> " + groupMap.get(key));
+            Set<Entry<String, String>> entries = groupMap.entrySet();
+            containerLog.trace("  Found " + entries.size() + " direct roles");
+            for (Entry<String, String> entry : entries) {
+                containerLog.trace(  "  Found direct role " + entry.getKey() + " -> " + entry.getValue());
             }
         }
 
@@ -2025,7 +2016,8 @@ public class JNDIRealm extends RealmBase {
                         containerLog.trace("Perform a nested group search with base "+ roleBase + " and filter " + filter);
                     }
 
-                    results = context.search(roleBase, filter, controls);
+                    results = searchAsUser(context, user, roleBase, filter, controls,
+                            isRoleSearchAsUser());
 
                     try {
                         while (results.hasMore()) {
@@ -2048,6 +2040,8 @@ public class JNDIRealm extends RealmBase {
                     } catch (PartialResultException ex) {
                         if (!adCompat)
                             throw ex;
+                    } finally {
+                        results.close();
                     }
                 }
 
@@ -2059,13 +2053,52 @@ public class JNDIRealm extends RealmBase {
         return list;
     }
 
+    /**
+     * Perform the search on the context as the {@code dn}, when
+     * {@code searchAsUser} is {@code true}, otherwise search the context with
+     * the default credentials.
+     *
+     * @param context
+     *            context to search on
+     * @param user
+     *            user to bind on
+     * @param base
+     *            base to start the search from
+     * @param filter
+     *            filter to use for the search
+     * @param controls
+     *            controls to use for the search
+     * @param searchAsUser
+     *            {@code true} when the search should be done as user, or
+     *            {@code false} for using the default credentials
+     * @return enumeration with all found entries
+     * @throws NamingException
+     *             if a directory server error occurs
+     */
+    private NamingEnumeration<SearchResult> searchAsUser(DirContext context,
+            User user, String base, String filter,
+            SearchControls controls, boolean searchAsUser) throws NamingException {
+        NamingEnumeration<SearchResult> results;
+        try {
+            if (searchAsUser) {
+                userCredentialsAdd(context, user.getDN(), user.getPassword());
+            }
+            results = context.search(base, filter, controls);
+        } finally {
+            if (searchAsUser) {
+                userCredentialsRemove(context);
+            }
+        }
+        return results;
+    }
+
 
     /**
      * Return a String representing the value of the specified attribute.
      *
      * @param attrId Attribute name
      * @param attrs Attributes containing the required value
-     *
+     * @return the attribute value
      * @exception NamingException if a directory server error occurs
      */
     private String getAttributeValue(String attrId, Attributes attrs)
@@ -2079,10 +2112,10 @@ public class JNDIRealm extends RealmBase {
 
         Attribute attr = attrs.get(attrId);
         if (attr == null)
-            return (null);
+            return null;
         Object value = attr.get();
         if (value == null)
-            return (null);
+            return null;
         String valueString = null;
         if (value instanceof byte[])
             valueString = new String((byte[]) value);
@@ -2099,7 +2132,7 @@ public class JNDIRealm extends RealmBase {
      * @param attrId Attribute name
      * @param attrs Attributes containing the new values
      * @param values ArrayList containing values found so far
-     *
+     * @return the list of attribute values
      * @exception NamingException if a directory server error occurs
      */
     private ArrayList<String> addAttributeValues(String attrId,
@@ -2115,7 +2148,7 @@ public class JNDIRealm extends RealmBase {
             values = new ArrayList<>();
         Attribute attr = attrs.get(attrId);
         if (attr == null)
-            return (values);
+            return values;
         NamingEnumeration<?> e = attr.getAll();
         try {
             while(e.hasMore()) {
@@ -2125,6 +2158,8 @@ public class JNDIRealm extends RealmBase {
         } catch (PartialResultException ex) {
             if (!adCompat)
                 throw ex;
+        } finally {
+            e.close();
         }
         return values;
     }
@@ -2163,28 +2198,36 @@ public class JNDIRealm extends RealmBase {
 
 
     /**
-     * Return a short name for this Realm implementation.
-     */
-    @Override
-    protected String getName() {
-
-        return (name);
-
-    }
-
-
-    /**
-     * Return the password associated with the given principal's user name.
+     * Get the password for the specified user.
+     * @param username The user name
+     * @return the password associated with the given principal's user name.
      */
     @Override
     protected String getPassword(String username) {
+        String userPassword = getUserPassword();
+        if (userPassword == null || userPassword.isEmpty()) {
+            return null;
+        }
 
-        return (null);
+        try {
+            User user = getUser(open(), username, null);
+             if (user == null) {
+                // User should be found...
+                return null;
+            } else {
+                // ... and have a password
+                return user.getPassword();
+            }
+        } catch (NamingException e) {
+            return null;
+        }
 
     }
 
     /**
-     * Return the Principal associated with the given user name.
+     * Get the principal associated with the specified certificate.
+     * @param username The user name
+     * @return the Principal associated with the given certificate.
      */
     @Override
     protected Principal getPrincipal(String username) {
@@ -2210,22 +2253,7 @@ public class JNDIRealm extends RealmBase {
                 // Authenticate the specified username if possible
                 principal = getPrincipal(context, username, gssCredential);
 
-            } catch (CommunicationException e) {
-
-                // log the exception so we know it's there.
-                containerLog.info(sm.getString("jndiRealm.exception.retry"), e);
-
-                // close the connection so we know it will be reopened.
-                if (context != null)
-                    close(context);
-
-                // open a new directory context.
-                context = open();
-
-                // Try the authentication again.
-                principal = getPrincipal(context, username, gssCredential);
-
-            } catch (ServiceUnavailableException e) {
+            } catch (CommunicationException | ServiceUnavailableException e) {
 
                 // log the exception so we know it's there.
                 containerLog.info(sm.getString("jndiRealm.exception.retry"), e);
@@ -2247,7 +2275,7 @@ public class JNDIRealm extends RealmBase {
             release(context);
 
             // Return the authenticated Principal (if any)
-            return (principal);
+            return principal;
 
         } catch (NamingException e) {
 
@@ -2259,7 +2287,7 @@ public class JNDIRealm extends RealmBase {
                 close(context);
 
             // Return "not authenticated" for this request
-            return (null);
+            return null;
 
         }
 
@@ -2268,7 +2296,12 @@ public class JNDIRealm extends RealmBase {
 
 
     /**
-     * Return the Principal associated with the given user name.
+     * Get the principal associated with the specified certificate.
+     * @param context The directory context
+     * @param username The user name
+     * @param gssCredential The credentials
+     * @return the Principal associated with the given certificate.
+     * @exception NamingException if a directory server error occurs
      */
     protected synchronized Principal getPrincipal(DirContext context,
             String username, GSSCredential gssCredential)
@@ -2329,14 +2362,14 @@ public class JNDIRealm extends RealmBase {
     /**
      * Open (if necessary) and return a connection to the configured
      * directory server for this Realm.
-     *
+     * @return the directory context
      * @exception NamingException if a directory server error occurs
      */
     protected DirContext open() throws NamingException {
 
         // Do nothing if there is a directory server connection already open
         if (context != null)
-            return (context);
+            return context;
 
         try {
 
@@ -2361,8 +2394,14 @@ public class JNDIRealm extends RealmBase {
 
         }
 
-        return (context);
+        return context;
 
+    }
+
+    @Override
+    public boolean isAvailable() {
+        // Simple best effort check
+        return (context != null);
     }
 
     private DirContext createDirContext(Hashtable<String, String> env) throws NamingException {
@@ -2398,8 +2437,7 @@ public class JNDIRealm extends RealmBase {
                         "jndiRealm.invalidSslSocketFactory",
                         className));
             }
-        } catch (ClassNotFoundException | SecurityException
-                | InstantiationException | IllegalAccessException e) {
+        } catch (ReflectiveOperationException | SecurityException e) {
             throw new IllegalArgumentException(sm.getString(
                     "jndiRealm.invalidSslSocketFactory",
                     className), e);
@@ -2508,6 +2546,8 @@ public class JNDIRealm extends RealmBase {
             env.put(JNDIRealm.DEREF_ALIASES, derefAliases);
         if (connectionTimeout != null)
             env.put("com.sun.jndi.ldap.connect.timeout", connectionTimeout);
+        if (readTimeout != null)
+            env.put("com.sun.jndi.ldap.read.timeout", readTimeout);
 
         return env;
 
@@ -2581,11 +2621,12 @@ public class JNDIRealm extends RealmBase {
      *
      * @param userPatternString - a string LDAP search paths surrounded by
      * parentheses
+     * @return a parsed string array
      */
     protected String[] parseUserPatternString(String userPatternString) {
 
         if (userPatternString != null) {
-            ArrayList<String> pathList = new ArrayList<>();
+            List<String> pathList = new ArrayList<>();
             int startParenLoc = userPatternString.indexOf('(');
             if (startParenLoc == -1) {
                 // no parens here; return whole thing
@@ -2599,12 +2640,12 @@ public class JNDIRealm extends RealmBase {
                 // strings: (|(something)(somethingelse))
                 while ( (userPatternString.charAt(startParenLoc + 1) == '|') ||
                         (startParenLoc != 0 && userPatternString.charAt(startParenLoc - 1) == '\\') ) {
-                    startParenLoc = userPatternString.indexOf("(", startParenLoc+1);
+                    startParenLoc = userPatternString.indexOf('(', startParenLoc+1);
                 }
-                endParenLoc = userPatternString.indexOf(")", startParenLoc+1);
+                endParenLoc = userPatternString.indexOf(')', startParenLoc+1);
                 // weed out escaped end-parens
                 while (userPatternString.charAt(endParenLoc - 1) == '\\') {
-                    endParenLoc = userPatternString.indexOf(")", endParenLoc+1);
+                    endParenLoc = userPatternString.indexOf(')', endParenLoc+1);
                 }
                 String nextPathPart = userPatternString.substring
                     (startParenLoc+1, endParenLoc);
@@ -2669,50 +2710,49 @@ public class JNDIRealm extends RealmBase {
      * @param base The base DN
      * @param result The search result
      * @return String containing the distinguished name
+     * @exception NamingException if a directory server error occurs
      */
     protected String getDistinguishedName(DirContext context, String base,
             SearchResult result) throws NamingException {
         // Get the entry's distinguished name.  For relative results, this means
         // we need to composite a name with the base name, the context name, and
         // the result name.  For non-relative names, use the returned name.
+        String resultName = result.getName();
         if (result.isRelative()) {
            if (containerLog.isTraceEnabled()) {
-               containerLog.trace("  search returned relative name: " +
-                       result.getName());
+               containerLog.trace("  search returned relative name: " + resultName);
            }
            NameParser parser = context.getNameParser("");
            Name contextName = parser.parse(context.getNameInNamespace());
            Name baseName = parser.parse(base);
 
            // Bugzilla 32269
-           Name entryName =
-               parser.parse(new CompositeName(result.getName()).get(0));
+           Name entryName = parser.parse(new CompositeName(resultName).get(0));
 
            Name name = contextName.addAll(baseName);
            name = name.addAll(entryName);
            return name.toString();
         } else {
-           String absoluteName = result.getName();
-           if (containerLog.isTraceEnabled())
-               containerLog.trace("  search returned absolute name: " +
-                       result.getName());
+           if (containerLog.isTraceEnabled()) {
+               containerLog.trace("  search returned absolute name: " + resultName);
+           }
            try {
                // Normalize the name by running it through the name parser.
                NameParser parser = context.getNameParser("");
-               URI userNameUri = new URI(absoluteName);
+               URI userNameUri = new URI(resultName);
                String pathComponent = userNameUri.getPath();
                // Should not ever have an empty path component, since that is /{DN}
                if (pathComponent.length() < 1 ) {
                    throw new InvalidNameException(
                            "Search returned unparseable absolute name: " +
-                           absoluteName );
+                           resultName );
                }
                Name name = parser.parse(pathComponent.substring(1));
                return name.toString();
            } catch ( URISyntaxException e ) {
                throw new InvalidNameException(
                        "Search returned unparseable absolute name: " +
-                       absoluteName );
+                       resultName );
            }
         }
     }
