@@ -31,6 +31,7 @@ import java.sql.PreparedStatement;
 import java.sql.ResultSet;
 import java.sql.SQLException;
 import java.util.ArrayList;
+import java.util.List;
 import java.util.Properties;
 
 import javax.naming.Context;
@@ -39,16 +40,17 @@ import javax.naming.NamingException;
 import javax.sql.DataSource;
 
 import org.apache.catalina.Container;
+import org.apache.catalina.Globals;
 import org.apache.catalina.LifecycleException;
-import org.apache.catalina.Loader;
 import org.apache.catalina.Session;
-import org.apache.catalina.util.CustomObjectInputStream;
+import org.apache.juli.logging.Log;
 import org.apache.tomcat.util.ExceptionUtils;
 
 /**
- * Implementation of the <code>Store</code> interface that stores
- * serialized session objects in a database.  Sessions that are
- * saved are still subject to being expired based on inactivity.
+ * Implementation of the {@link org.apache.catalina.Store Store}
+ * interface that stores serialized session objects in a database.
+ * Sessions that are saved are still subject to being expired
+ * based on inactivity.
  *
  * @author Bip Thelin
  */
@@ -67,7 +69,7 @@ public class JDBCStore extends StoreBase {
     /**
      * Name to register for the background thread.
      */
-    protected final String threadName = "JDBCStore";
+    protected static final String threadName = "JDBCStore";
 
     /**
      * The connection username to use when trying to connect to the database.
@@ -106,11 +108,17 @@ public class JDBCStore extends StoreBase {
     protected String dataSourceName = null;
 
     /**
+     * Context local datasource.
+     */
+    private boolean localDataSource = false;
+
+    /**
      * DataSource to use
      */
     protected DataSource dataSource = null;
 
-    // ------------------------------------------------------------- Table & cols
+
+    // ------------------------------------------------------------ Table & cols
 
     /**
      * Table to use.
@@ -133,7 +141,7 @@ public class JDBCStore extends StoreBase {
     protected String sessionDataCol = "data";
 
     /**
-     * Is Valid column to use.
+     * {@code Is Valid} column to use.
      */
     protected String sessionValidCol = "valid";
 
@@ -147,17 +155,13 @@ public class JDBCStore extends StoreBase {
      */
     protected String sessionLastAccessedCol = "lastaccess";
 
-    // ------------------------------------------------------------- SQL Variables
+
+    // ----------------------------------------------------------- SQL Variables
 
     /**
      * Variable to hold the <code>getSize()</code> prepared statement.
      */
     protected PreparedStatement preparedSizeSql = null;
-
-    /**
-     * Variable to hold the <code>keys()</code> prepared statement.
-     */
-    protected PreparedStatement preparedKeysSql = null;
 
     /**
      * Variable to hold the <code>save()</code> prepared statement.
@@ -179,10 +183,11 @@ public class JDBCStore extends StoreBase {
      */
     protected PreparedStatement preparedLoadSql = null;
 
-    // ------------------------------------------------------------- Properties
+
+    // -------------------------------------------------------------- Properties
 
     /**
-     * Return the name for this instance (built from container name)
+     * @return the name for this instance (built from container name)
      */
     public String getName() {
         if (name == null) {
@@ -207,18 +212,18 @@ public class JDBCStore extends StoreBase {
     }
 
     /**
-     * Return the thread name for this Store.
+     * @return the thread name for this Store.
      */
     public String getThreadName() {
-        return (threadName);
+        return threadName;
     }
 
     /**
-     * Return the name for this Store, used for logging.
+     * @return the name for this Store, used for logging.
      */
     @Override
     public String getStoreName() {
-        return (storeName);
+        return storeName;
     }
 
     /**
@@ -236,15 +241,14 @@ public class JDBCStore extends StoreBase {
     }
 
     /**
-     * Return the driver for this Store.
+     * @return the driver for this Store.
      */
     public String getDriverName() {
-        return (this.driverName);
+        return driverName;
     }
 
     /**
-     * Return the username to use to connect to the database.
-     *
+     * @return the username to use to connect to the database.
      */
     public String getConnectionName() {
         return connectionName;
@@ -260,8 +264,7 @@ public class JDBCStore extends StoreBase {
     }
 
     /**
-     * Return the password to use to connect to the database.
-     *
+     * @return the password to use to connect to the database.
      */
     public String getConnectionPassword() {
         return connectionPassword;
@@ -290,10 +293,10 @@ public class JDBCStore extends StoreBase {
     }
 
     /**
-     * Return the Connection URL for this Store.
+     * @return the Connection URL for this Store.
      */
     public String getConnectionURL() {
-        return (this.connectionURL);
+        return connectionURL;
     }
 
     /**
@@ -310,10 +313,10 @@ public class JDBCStore extends StoreBase {
     }
 
     /**
-     * Return the table for this Store.
+     * @return the table for this Store.
      */
     public String getSessionTable() {
-        return (this.sessionTable);
+        return sessionTable;
     }
 
     /**
@@ -330,10 +333,10 @@ public class JDBCStore extends StoreBase {
     }
 
     /**
-     * Return the web application name column for the table.
+     * @return the web application name column for the table.
      */
     public String getSessionAppCol() {
-        return (this.sessionAppCol);
+        return this.sessionAppCol;
     }
 
     /**
@@ -350,10 +353,10 @@ public class JDBCStore extends StoreBase {
     }
 
     /**
-     * Return the Id column for the table.
+     * @return the Id column for the table.
      */
     public String getSessionIdCol() {
-        return (this.sessionIdCol);
+        return this.sessionIdCol;
     }
 
     /**
@@ -370,14 +373,14 @@ public class JDBCStore extends StoreBase {
     }
 
     /**
-     * Return the data column for the table
+     * @return the data column for the table
      */
     public String getSessionDataCol() {
-        return (this.sessionDataCol);
+        return this.sessionDataCol;
     }
 
     /**
-     * Set the Is Valid column for the table
+     * Set the {@code Is Valid} column for the table
      *
      * @param sessionValidCol The column name
      */
@@ -390,14 +393,14 @@ public class JDBCStore extends StoreBase {
     }
 
     /**
-     * Return the Is Valid column
+     * @return the {@code Is Valid} column
      */
     public String getSessionValidCol() {
-        return (this.sessionValidCol);
+        return this.sessionValidCol;
     }
 
     /**
-     * Set the Max Inactive column for the table
+     * Set the {@code Max Inactive} column for the table
      *
      * @param sessionMaxInactiveCol The column name
      */
@@ -410,14 +413,14 @@ public class JDBCStore extends StoreBase {
     }
 
     /**
-     * Return the Max Inactive column
+     * @return the {@code Max Inactive} column
      */
     public String getSessionMaxInactiveCol() {
-        return (this.sessionMaxInactiveCol);
+        return this.sessionMaxInactiveCol;
     }
 
     /**
-     * Set the Last Accessed column for the table
+     * Set the {@code Last Accessed} column for the table
      *
      * @param sessionLastAccessedCol The column name
      */
@@ -430,10 +433,10 @@ public class JDBCStore extends StoreBase {
     }
 
     /**
-     * Return the Last Accessed column
+     * @return the {@code Last Accessed} column
      */
     public String getSessionLastAccessedCol() {
-        return (this.sessionLastAccessedCol);
+        return this.sessionLastAccessedCol;
     }
 
     /**
@@ -451,23 +454,54 @@ public class JDBCStore extends StoreBase {
     }
 
     /**
-     * Return the name of the JNDI DataSource-factory
+     * @return the name of the JNDI DataSource-factory
      */
     public String getDataSourceName() {
         return this.dataSourceName;
     }
 
+    /**
+     * @return if the datasource will be looked up in the webapp JNDI Context.
+     */
+    public boolean getLocalDataSource() {
+        return localDataSource;
+    }
+
+    /**
+     * Set to {@code true} to cause the datasource to be looked up in the webapp
+     * JNDI Context.
+     *
+     * @param localDataSource the new flag value
+     */
+    public void setLocalDataSource(boolean localDataSource) {
+      this.localDataSource = localDataSource;
+    }
+
+
     // --------------------------------------------------------- Public Methods
+
+    @Override
+    public String[] expiredKeys() throws IOException {
+        return keys(true);
+    }
+
+    @Override
+    public String[] keys() throws IOException {
+        return keys(false);
+    }
 
     /**
      * Return an array containing the session identifiers of all Sessions
      * currently saved in this Store.  If there are no such Sessions, a
      * zero-length array is returned.
      *
+     * @param expiredOnly flag, whether only keys of expired sessions should
+     *        be returned
+     * @return array containing the list of session IDs
+     *
      * @exception IOException if an input/output error occurred
      */
-    @Override
-    public String[] keys() throws IOException {
+    private String[] keys(boolean expiredOnly) throws IOException {
         String keys[] = null;
         synchronized (this) {
             int numberOfTries = 2;
@@ -475,27 +509,32 @@ public class JDBCStore extends StoreBase {
 
                 Connection _conn = getConnection();
                 if (_conn == null) {
-                    return (new String[0]);
+                    return new String[0];
                 }
                 try {
-                    if (preparedKeysSql == null) {
-                        String keysSql = "SELECT " + sessionIdCol + " FROM "
-                                + sessionTable + " WHERE " + sessionAppCol
-                                + " = ?";
-                        preparedKeysSql = _conn.prepareStatement(keysSql);
-                    }
 
-                    preparedKeysSql.setString(1, getName());
-                    try (ResultSet rst = preparedKeysSql.executeQuery()) {
-                        ArrayList<String> tmpkeys = new ArrayList<>();
-                        if (rst != null) {
-                            while (rst.next()) {
-                                tmpkeys.add(rst.getString(1));
-                            }
+                    String keysSql = "SELECT " + sessionIdCol + " FROM "
+                            + sessionTable + " WHERE " + sessionAppCol + " = ?";
+                    if (expiredOnly) {
+                        keysSql += " AND (" + sessionLastAccessedCol + " + "
+                                + sessionMaxInactiveCol + " * 1000 < ?)";
+                    }
+                    try (PreparedStatement preparedKeysSql = _conn.prepareStatement(keysSql)) {
+                        preparedKeysSql.setString(1, getName());
+                        if (expiredOnly) {
+                            preparedKeysSql.setLong(2, System.currentTimeMillis());
                         }
-                        keys = tmpkeys.toArray(new String[tmpkeys.size()]);
-                        // Break out after the finally block
-                        numberOfTries = 0;
+                        try (ResultSet rst = preparedKeysSql.executeQuery()) {
+                            List<String> tmpkeys = new ArrayList<>();
+                            if (rst != null) {
+                                while (rst.next()) {
+                                    tmpkeys.add(rst.getString(1));
+                                }
+                            }
+                            keys = tmpkeys.toArray(new String[tmpkeys.size()]);
+                            // Break out after the finally block
+                            numberOfTries = 0;
+                        }
                     }
                 } catch (SQLException e) {
                     manager.getContext().getLogger().error(sm.getString(getStoreName() + ".SQLException", e));
@@ -517,6 +556,8 @@ public class JDBCStore extends StoreBase {
      * currently saved in this Store.  If there are no Sessions,
      * <code>0</code> is returned.
      *
+     * @return the count of all sessions currently saved in this Store
+     *
      * @exception IOException if an input/output error occurred
      */
     @Override
@@ -529,7 +570,7 @@ public class JDBCStore extends StoreBase {
                 Connection _conn = getConnection();
 
                 if (_conn == null) {
-                    return (size);
+                    return size;
                 }
 
                 try {
@@ -573,21 +614,19 @@ public class JDBCStore extends StoreBase {
     @Override
     public Session load(String id) throws ClassNotFoundException, IOException {
         StandardSession _session = null;
-        Loader loader = null;
-        ClassLoader classLoader = null;
-        ObjectInputStream ois = null;
-        BufferedInputStream bis = null;
-        org.apache.catalina.Context context = manager.getContext();
+        org.apache.catalina.Context context = getManager().getContext();
+        Log contextLog = context.getLogger();
 
         synchronized (this) {
             int numberOfTries = 2;
             while (numberOfTries > 0) {
                 Connection _conn = getConnection();
                 if (_conn == null) {
-                    return (null);
+                    return null;
                 }
 
-                ClassLoader oldThreadContextCL = Thread.currentThread().getContextClassLoader();
+                ClassLoader oldThreadContextCL = context.bind(Globals.IS_SECURITY_ENABLED, null);
+
                 try {
                     if (preparedLoadSql == null) {
                         String loadSql = "SELECT " + sessionIdCol + ", "
@@ -601,56 +640,36 @@ public class JDBCStore extends StoreBase {
                     preparedLoadSql.setString(2, getName());
                     try (ResultSet rst = preparedLoadSql.executeQuery()) {
                         if (rst.next()) {
-                            bis = new BufferedInputStream(rst.getBinaryStream(2));
+                            try (ObjectInputStream ois =
+                                    getObjectInputStream(rst.getBinaryStream(2))) {
+                                if (contextLog.isDebugEnabled()) {
+                                    contextLog.debug(sm.getString(
+                                            getStoreName() + ".loading", id, sessionTable));
+                                }
 
-                            if (context != null) {
-                                loader = context.getLoader();
+                                _session = (StandardSession) manager.createEmptySession();
+                                _session.readObjectData(ois);
+                                _session.setManager(manager);
                             }
-                            if (loader != null) {
-                                classLoader = loader.getClassLoader();
-                            }
-                            if (classLoader != null) {
-                                Thread.currentThread().setContextClassLoader(classLoader);
-                                ois = new CustomObjectInputStream(bis,
-                                        classLoader);
-                            } else {
-                                ois = new ObjectInputStream(bis);
-                            }
-
-                            if (manager.getContext().getLogger().isDebugEnabled()) {
-                                manager.getContext().getLogger().debug(sm.getString(getStoreName() + ".loading",
-                                        id, sessionTable));
-                            }
-
-                            _session = (StandardSession) manager.createEmptySession();
-                            _session.readObjectData(ois);
-                            _session.setManager(manager);
-                          } else if (manager.getContext().getLogger().isDebugEnabled()) {
-                            manager.getContext().getLogger().debug(getStoreName() + ": No persisted data object found");
+                        } else if (context.getLogger().isDebugEnabled()) {
+                            contextLog.debug(getStoreName() + ": No persisted data object found");
                         }
                         // Break out after the finally block
                         numberOfTries = 0;
                     }
                 } catch (SQLException e) {
-                    manager.getContext().getLogger().error(sm.getString(getStoreName() + ".SQLException", e));
+                    contextLog.error(sm.getString(getStoreName() + ".SQLException", e));
                     if (dbConnection != null)
                         close(dbConnection);
                 } finally {
-                    if (ois != null) {
-                        try {
-                            ois.close();
-                        } catch (IOException e) {
-                            // Ignore
-                        }
-                    }
-                    Thread.currentThread().setContextClassLoader(oldThreadContextCL);
+                    context.unbind(Globals.IS_SECURITY_ENABLED, oldThreadContextCL);
                     release(_conn);
                 }
                 numberOfTries--;
             }
         }
 
-        return (_session);
+        return _session;
     }
 
     /**
@@ -827,6 +846,7 @@ public class JDBCStore extends StoreBase {
         }
     }
 
+
     // --------------------------------------------------------- Protected Methods
 
     /**
@@ -857,7 +877,9 @@ public class JDBCStore extends StoreBase {
 
     /**
      * Open (if necessary) and return a database connection for use by
-     * this Realm.
+     * this Store.
+     *
+     * @return database connection ready to use
      *
      * @exception SQLException if a database error occurs
      */
@@ -865,19 +887,29 @@ public class JDBCStore extends StoreBase {
 
         // Do nothing if there is a database connection already open
         if (dbConnection != null)
-            return (dbConnection);
+            return dbConnection;
 
         if (dataSourceName != null && dataSource == null) {
+            org.apache.catalina.Context context = getManager().getContext();
+            ClassLoader oldThreadContextCL = null;
+            if (localDataSource) {
+                oldThreadContextCL = context.bind(Globals.IS_SECURITY_ENABLED, null);
+            }
+
             Context initCtx;
             try {
                 initCtx = new InitialContext();
                 Context envCtx = (Context) initCtx.lookup("java:comp/env");
                 this.dataSource = (DataSource) envCtx.lookup(this.dataSourceName);
             } catch (NamingException e) {
-                manager.getContext().getLogger().error(
+                context.getLogger().error(
                         sm.getString(getStoreName() + ".wrongDataSource",
                                 this.dataSourceName), e);
-           }
+            } finally {
+                if (localDataSource) {
+                    context.unbind(Globals.IS_SECURITY_ENABLED, oldThreadContextCL);
+                }
+            }
         }
 
         if (dataSource != null) {
@@ -888,16 +920,12 @@ public class JDBCStore extends StoreBase {
         if (driver == null) {
             try {
                 Class<?> clazz = Class.forName(driverName);
-                driver = (Driver) clazz.newInstance();
-            } catch (ClassNotFoundException ex) {
-                manager.getContext().getLogger().error(sm.getString(getStoreName() + ".checkConnectionClassNotFoundException",
-                        ex.toString()));
-            } catch (InstantiationException ex) {
-                manager.getContext().getLogger().error(sm.getString(getStoreName() + ".checkConnectionClassNotFoundException",
-                        ex.toString()));
-            } catch (IllegalAccessException ex) {
-                manager.getContext().getLogger().error(sm.getString(getStoreName() + ".checkConnectionClassNotFoundException",
-                        ex.toString()));
+                driver = (Driver) clazz.getConstructor().newInstance();
+            } catch (ReflectiveOperationException e) {
+                manager.getContext().getLogger().error(
+                        sm.getString(getStoreName() + ".checkConnectionClassNotFoundException",
+                        e.toString()));
+                throw new SQLException(e);
             }
         }
 
@@ -909,7 +937,7 @@ public class JDBCStore extends StoreBase {
             props.put("password", connectionPassword);
         dbConnection = driver.connect(connectionURL, props);
         dbConnection.setAutoCommit(true);
-        return (dbConnection);
+        return dbConnection;
 
     }
 
@@ -931,13 +959,6 @@ public class JDBCStore extends StoreBase {
             ExceptionUtils.handleThrowable(f);
         }
         this.preparedSizeSql = null;
-
-        try {
-            preparedKeysSql.close();
-        } catch (Throwable f) {
-            ExceptionUtils.handleThrowable(f);
-        }
-        this.preparedKeysSql = null;
 
         try {
             preparedSaveSql.close();
