@@ -39,8 +39,8 @@ import org.apache.jasper.servlet.JasperLoader;
 import org.apache.jasper.servlet.JspServletWrapper;
 import org.apache.juli.logging.Log;
 import org.apache.juli.logging.LogFactory;
+import org.apache.tomcat.Jar;
 import org.apache.tomcat.util.descriptor.tld.TldResourcePath;
-import org.apache.tomcat.util.scan.Jar;
 
 /**
  * A place holder for various things that are used through out the JSP
@@ -115,7 +115,7 @@ public class JspCompilationContext {
 
         String baseURI = jspUri.substring(0, jspUri.lastIndexOf('/') + 1);
         // hack fix for resolveRelativeURI
-        if (baseURI == null) {
+        if (baseURI.isEmpty()) {
             baseURI = "/";
         } else if (baseURI.charAt(0) != '/') {
             // strip the base slash since it will be combined with the
@@ -141,7 +141,7 @@ public class JspCompilationContext {
     /** ---------- Class path and loader ---------- */
 
     /**
-     * The classpath that is passed off to the Java compiler.
+     * @return the classpath that is passed off to the Java compiler.
      */
     public String getClassPath() {
         if( classPath != null ) {
@@ -152,6 +152,7 @@ public class JspCompilationContext {
 
     /**
      * The classpath that is passed off to the Java compiler.
+     * @param classPath The class path to use
      */
     public void setClassPath(String classPath) {
         this.classPath = classPath;
@@ -160,6 +161,7 @@ public class JspCompilationContext {
     /**
      * What class loader to use for loading classes while compiling
      * this JSP?
+     * @return the class loader used to load all compiled classes
      */
     public ClassLoader getClassLoader() {
         if( loader != null ) {
@@ -182,12 +184,18 @@ public class JspCompilationContext {
         return jspLoader;
     }
 
+    public void clearJspLoader() {
+        jspLoader = null;
+    }
+
+
     /** ---------- Input/Output  ---------- */
 
     /**
      * The output directory to generate code into.  The output directory
      * is make up of the scratch directory, which is provide in Options,
      * plus the directory derived from the package name.
+     * @return the output directory in which the generated sources are placed
      */
     public String getOutputDir() {
         if (outputDir == null) {
@@ -201,6 +209,7 @@ public class JspCompilationContext {
      * Create a "Compiler" object based on some init param data. This
      * is not done yet. Right now we're just hardcoding the actual
      * compilers that are created.
+     * @return the Java compiler wrapper
      */
     public Compiler createCompiler() {
         if (jspCompiler != null ) {
@@ -223,7 +232,8 @@ public class JspCompilationContext {
             }
         }
         if (jspCompiler == null) {
-            throw new IllegalStateException(Localizer.getMessage("jsp.error.compiler"));
+            throw new IllegalStateException(Localizer.getMessage("jsp.error.compiler.config",
+                    options.getCompilerClassName(), options.getCompiler()));
         }
         jspCompiler.init(this, jsw);
         return jspCompiler;
@@ -232,19 +242,13 @@ public class JspCompilationContext {
     protected Compiler createCompiler(String className) {
         Compiler compiler = null;
         try {
-            compiler = (Compiler) Class.forName(className).newInstance();
-        } catch (InstantiationException e) {
-            log.warn(Localizer.getMessage("jsp.error.compiler"), e);
-        } catch (IllegalAccessException e) {
-            log.warn(Localizer.getMessage("jsp.error.compiler"), e);
-        } catch (NoClassDefFoundError e) {
+            compiler = (Compiler) Class.forName(className).getConstructor().newInstance();
+        } catch (NoClassDefFoundError | ClassNotFoundException e) {
             if (log.isDebugEnabled()) {
                 log.debug(Localizer.getMessage("jsp.error.compiler"), e);
             }
-        } catch (ClassNotFoundException e) {
-            if (log.isDebugEnabled()) {
-                log.debug(Localizer.getMessage("jsp.error.compiler"), e);
-            }
+        } catch (ReflectiveOperationException e) {
+            log.warn(Localizer.getMessage("jsp.error.compiler"), e);
         }
         return compiler;
     }
@@ -258,6 +262,8 @@ public class JspCompilationContext {
     /**
      * Get the full value of a URI relative to this compilations context
      * uses current file as the base.
+     * @param uri The relative URI
+     * @return absolute URI
      */
     public String resolveRelativeUri(String uri) {
         // sometimes we get uri's massaged from File(String), so check for
@@ -272,6 +278,7 @@ public class JspCompilationContext {
     /**
      * Gets a resource as a stream, relative to the meanings of this
      * context's implementation.
+     * @param res the resource to look for
      * @return a null if the resource cannot be found or represented
      *         as an InputStream.
      */
@@ -292,6 +299,8 @@ public class JspCompilationContext {
     /**
      * Gets the actual path of a URI relative to the context of
      * the compilation.
+     * @param path The webapp path
+     * @return the corresponding path in the filesystem
      */
     public String getRealPath(String path) {
         if (context != null) {
@@ -305,6 +314,7 @@ public class JspCompilationContext {
      * JspCompilationContext was created is packaged, or null if this
      * JspCompilationContext does not correspond to a tag file, or if the
      * corresponding tag file is not packaged in a JAR.
+     * @return a JAR file
      */
     public Jar getTagFileJar() {
         return this.tagJar;
@@ -319,6 +329,7 @@ public class JspCompilationContext {
     /**
      * Just the class name (does not include package name) of the
      * generated class.
+     * @return the class name
      */
     public String getServletClassName() {
 
@@ -346,6 +357,7 @@ public class JspCompilationContext {
     /**
      * Path of the JSP URI. Note that this is not a file name. This is
      * the context rooted URI of the JSP file.
+     * @return the path to the JSP
      */
     public String getJspFile() {
         return jspUri;
@@ -419,9 +431,10 @@ public class JspCompilationContext {
     }
 
     /**
-     * True if we are compiling a tag file in prototype mode.
-     * ie we only generate codes with class for the tag handler with empty
-     * method bodies.
+     * @return <code>true</code> if we are compiling a tag file
+     *  in prototype mode.
+     *  ie we only generate codes with class for the tag handler with empty
+     *  method bodies.
      */
     public boolean isPrototypeMode() {
         return protoTypeMode;
@@ -432,9 +445,10 @@ public class JspCompilationContext {
     }
 
     /**
-     * Package name for the generated class is make up of the base package
+     * Package name for the generated class is made up of the base package
      * name, which is user settable, and the derived package name.  The
      * derived package name directly mirrors the file hierarchy of the JSP page.
+     * @return the package name
      */
     public String getServletPackageName() {
         if (isTagFile()) {
@@ -464,14 +478,23 @@ public class JspCompilationContext {
     }
 
     /**
-     * The package name into which the servlet class is generated.
+     * @return The base package name into which all servlet and associated code
+     *         is generated
      */
-    public void setServletPackageName(String servletPackageName) {
-        this.basePackageName = servletPackageName;
+    public String getBasePackageName() {
+        return basePackageName;
     }
 
     /**
-     * Full path name of the Java file into which the servlet is being
+     * The package name into which the servlet class is generated.
+     * @param basePackageName The package name to use
+     */
+    public void setBasePackageName(String basePackageName) {
+        this.basePackageName = basePackageName;
+    }
+
+    /**
+     * @return Full path name of the Java file into which the servlet is being
      * generated.
      */
     public String getServletJavaFileName() {
@@ -482,7 +505,7 @@ public class JspCompilationContext {
     }
 
     /**
-     * Get hold of the Options object for this context.
+     * @return the Options object for this context.
      */
     public Options getOptions() {
         return options;
@@ -497,7 +520,7 @@ public class JspCompilationContext {
     }
 
     /**
-     * Path of the Java file relative to the work directory.
+     * @return the path of the Java file relative to the work directory.
      */
     public String getJavaPath() {
 
@@ -523,7 +546,7 @@ public class JspCompilationContext {
     }
 
     /**
-     * Where is the servlet being generated?
+     * @return the writer that is used to write the generated Servlet source.
      */
     public ServletWriter getWriter() {
         return writer;
@@ -535,7 +558,7 @@ public class JspCompilationContext {
 
     /**
      * Gets the 'location' of the TLD associated with the given taglib 'uri'.
-     *
+     * @param uri The taglib URI
      * @return An array of two Strings: The first element denotes the real
      * path to the TLD. If the path to the TLD points to a jar file, then the
      * second element denotes the name of the TLD entry in the jar file.
@@ -547,7 +570,7 @@ public class JspCompilationContext {
     }
 
     /**
-     * Are we keeping generated code around?
+     * @return <code>true</code> if generated code is kept.
      */
     public boolean keepGenerated() {
         return getOptions().getKeepGenerated();
