@@ -145,7 +145,7 @@ public class BeanFactory
                 BeanInfo bi = Introspector.getBeanInfo(beanClass);
                 PropertyDescriptor[] pda = bi.getPropertyDescriptors();
 
-                Object bean = beanClass.newInstance();
+                Object bean = beanClass.getConstructor().newInstance();
 
                 /* Look for properties with explicitly configured setter */
                 RefAddr ra = ref.get("forceString");
@@ -234,22 +234,22 @@ public class BeanFactory
                                     Character.valueOf(value.charAt(0));
                             } else if (propType.equals(Byte.class)
                                        || propType.equals(byte.class)) {
-                                valueArray[0] = new Byte(value);
+                                valueArray[0] = Byte.valueOf(value);
                             } else if (propType.equals(Short.class)
                                        || propType.equals(short.class)) {
-                                valueArray[0] = new Short(value);
+                                valueArray[0] = Short.valueOf(value);
                             } else if (propType.equals(Integer.class)
                                        || propType.equals(int.class)) {
-                                valueArray[0] = new Integer(value);
+                                valueArray[0] = Integer.valueOf(value);
                             } else if (propType.equals(Long.class)
                                        || propType.equals(long.class)) {
-                                valueArray[0] = new Long(value);
+                                valueArray[0] = Long.valueOf(value);
                             } else if (propType.equals(Float.class)
                                        || propType.equals(float.class)) {
-                                valueArray[0] = new Float(value);
+                                valueArray[0] = Float.valueOf(value);
                             } else if (propType.equals(Double.class)
                                        || propType.equals(double.class)) {
-                                valueArray[0] = new Double(value);
+                                valueArray[0] = Double.valueOf(value);
                             } else if (propType.equals(Boolean.class)
                                        || propType.equals(boolean.class)) {
                                 valueArray[0] = Boolean.valueOf(value);
@@ -288,24 +288,16 @@ public class BeanFactory
                 NamingException ne = new NamingException(ie.getMessage());
                 ne.setRootCause(ie);
                 throw ne;
-            } catch (java.lang.IllegalAccessException iae) {
-                NamingException ne = new NamingException(iae.getMessage());
-                ne.setRootCause(iae);
-                throw ne;
-            } catch (java.lang.InstantiationException ie2) {
-                NamingException ne = new NamingException(ie2.getMessage());
-                ne.setRootCause(ie2);
-                throw ne;
-            } catch (java.lang.reflect.InvocationTargetException ite) {
-                Throwable cause = ite.getCause();
+            } catch (java.lang.ReflectiveOperationException e) {
+                Throwable cause = e.getCause();
                 if (cause instanceof ThreadDeath) {
                     throw (ThreadDeath) cause;
                 }
                 if (cause instanceof VirtualMachineError) {
                     throw (VirtualMachineError) cause;
                 }
-                NamingException ne = new NamingException(ite.getMessage());
-                ne.setRootCause(ite);
+                NamingException ne = new NamingException(e.getMessage());
+                ne.setRootCause(e);
                 throw ne;
             }
 
