@@ -31,8 +31,10 @@ import java.sql.SQLFeatureNotSupportedException;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Properties;
+import java.util.Set;
 import java.util.logging.Logger;
 
 import javax.management.InstanceAlreadyExistsException;
@@ -57,7 +59,7 @@ import org.apache.tomcat.dbcp.pool2.impl.GenericObjectPoolConfig;
 /**
  * <p>Basic implementation of <code>javax.sql.DataSource</code> that is
  * configured via JavaBeans properties.  This is not the only way to
- * combine the <em>commons-dbcp</em> and <em>commons-pool</em> packages,
+ * combine the <em>commons-dbcp2</em> and <em>commons-pool2</em> packages,
  * but provides a "one stop shopping" solution for basic requirements.</p>
  *
  * @author Glenn L. Nielsen
@@ -65,7 +67,7 @@ import org.apache.tomcat.dbcp.pool2.impl.GenericObjectPoolConfig;
  * @author Dirk Verbeeck
  * @since 2.0
  */
-public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBeanRegistration {
+public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBeanRegistration, AutoCloseable {
 
     private static final Log log = LogFactory.getLog(BasicDataSource.class);
 
@@ -78,8 +80,8 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
             // but the following classes are not loaded and therefore require
             // explicit loading.
             if (Utils.IS_SECURITY_ENABLED) {
-                ClassLoader loader = BasicDataSource.class.getClassLoader();
-                String dbcpPackageName = BasicDataSource.class.getPackage().getName();
+                final ClassLoader loader = BasicDataSource.class.getClassLoader();
+                final String dbcpPackageName = BasicDataSource.class.getPackage().getName();
                 loader.loadClass(dbcpPackageName + ".BasicDataSource$PaGetConnection");
                 loader.loadClass(dbcpPackageName + ".DelegatingCallableStatement");
                 loader.loadClass(dbcpPackageName + ".DelegatingDatabaseMetaData");
@@ -90,11 +92,11 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
                 loader.loadClass(dbcpPackageName + ".PoolingConnection$StatementType");
                 loader.loadClass(dbcpPackageName + ".PStmtKey");
 
-                String poolPackageName = PooledObject.class.getPackage().getName();
+                final String poolPackageName = PooledObject.class.getPackage().getName();
                 loader.loadClass(poolPackageName + ".impl.LinkedBlockingDeque$Node");
                 loader.loadClass(poolPackageName + ".impl.GenericKeyedObjectPool$ObjectDeque");
             }
-        } catch (ClassNotFoundException cnfe) {
+        } catch (final ClassNotFoundException cnfe) {
             throw new IllegalStateException("Unable to pre-load classes", cnfe);
         }
     }
@@ -104,7 +106,7 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
     /**
      * The default auto-commit state of connections created by this pool.
      */
-    private volatile Boolean defaultAutoCommit = null;
+    private volatile Boolean defaultAutoCommit;
 
     /**
      * Returns the default auto-commit property.
@@ -127,7 +129,7 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
      *
      * @param defaultAutoCommit default auto-commit value
      */
-    public void setDefaultAutoCommit(Boolean defaultAutoCommit) {
+    public void setDefaultAutoCommit(final Boolean defaultAutoCommit) {
         this.defaultAutoCommit = defaultAutoCommit;
     }
 
@@ -135,7 +137,7 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
     /**
      * The default read-only state of connections created by this pool.
      */
-    private transient Boolean defaultReadOnly = null;
+    private transient Boolean defaultReadOnly;
 
     /**
      * Returns the default readOnly property.
@@ -157,7 +159,7 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
      *
      * @param defaultReadOnly default read-only value
      */
-    public void setDefaultReadOnly(Boolean defaultReadOnly) {
+    public void setDefaultReadOnly(final Boolean defaultReadOnly) {
         this.defaultReadOnly = defaultReadOnly;
     }
 
@@ -191,17 +193,18 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
      * state
      * @see Connection#getTransactionIsolation
      */
-    public void setDefaultTransactionIsolation(int defaultTransactionIsolation) {
+    public void setDefaultTransactionIsolation(final int defaultTransactionIsolation) {
         this.defaultTransactionIsolation = defaultTransactionIsolation;
     }
 
 
-    private Integer defaultQueryTimeout = null;
+    private Integer defaultQueryTimeout;
 
     /**
      * Obtain the default query timeout that will be used for {@link java.sql.Statement Statement}s
      * created from this connection. <code>null</code> means that the driver
      * default will be used.
+     * @return the timoeut
      */
     public Integer getDefaultQueryTimeout() {
         return defaultQueryTimeout;
@@ -212,8 +215,9 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
      * Set the default query timeout that will be used for {@link java.sql.Statement Statement}s
      * created from this connection. <code>null</code> means that the driver
      * default will be used.
+     * @param defaultQueryTimeout The new default timeout
      */
-    public void setDefaultQueryTimeout(Integer defaultQueryTimeout) {
+    public void setDefaultQueryTimeout(final Integer defaultQueryTimeout) {
         this.defaultQueryTimeout = defaultQueryTimeout;
     }
 
@@ -221,7 +225,7 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
     /**
      * The default "catalog" of connections created by this pool.
      */
-    private volatile String defaultCatalog = null;
+    private volatile String defaultCatalog;
 
     /**
      * Returns the default catalog.
@@ -243,7 +247,7 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
      *
      * @param defaultCatalog the default catalog
      */
-    public void setDefaultCatalog(String defaultCatalog) {
+    public void setDefaultCatalog(final String defaultCatalog) {
         if (defaultCatalog != null && defaultCatalog.trim().length() > 0) {
             this.defaultCatalog = defaultCatalog;
         }
@@ -273,14 +277,14 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
      *
      * @param cacheState    The new value for the state caching flag
      */
-    public void setCacheState(boolean cacheState) {
+    public void setCacheState(final boolean cacheState) {
         this.cacheState = cacheState;
     }
 
     /**
      * The instance of the JDBC Driver to use.
      */
-    private Driver driver = null;
+    private Driver driver;
 
     /**
      * Returns the JDBC Driver that has been configured for use by this pool.
@@ -304,25 +308,25 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
      * following methods is invoked: <code>getConnection, setLogwriter,
      * setLoginTimeout, getLoginTimeout, getLogWriter.</code></p>
      *
-     * @param driver
+     * @param driver The driver to use
      */
-    public synchronized void setDriver(Driver driver) {
+    public synchronized void setDriver(final Driver driver) {
         this.driver = driver;
     }
 
     /**
      * The fully qualified Java class name of the JDBC driver to be used.
      */
-    private String driverClassName = null;
+    private String driverClassName;
 
     /**
-     * Returns the jdbc driver class name.
+     * Returns the JDBC driver class name.
      * <p>
      * Note: This getter only returns the last value set by a call to
      * {@link #setDriverClassName(String)}. It does not return the class name of
      * any driver that may have been set via {@link #setDriver(Driver)}.
      *
-     * @return the jdbc driver class name
+     * @return the JDBC driver class name
      */
     @Override
     public synchronized String getDriverClassName() {
@@ -330,16 +334,16 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
     }
 
     /**
-     * <p>Sets the jdbc driver class name.</p>
+     * <p>Sets the JDBC driver class name.</p>
      * <p>
      * Note: this method currently has no effect once the pool has been
      * initialized.  The pool is initialized the first time one of the
      * following methods is invoked: <code>getConnection, setLogwriter,
      * setLoginTimeout, getLoginTimeout, getLogWriter.</code></p>
      *
-     * @param driverClassName the class name of the jdbc driver
+     * @param driverClassName the class name of the JDBC driver
      */
-    public synchronized void setDriverClassName(String driverClassName) {
+    public synchronized void setDriverClassName(final String driverClassName) {
         if (driverClassName != null && driverClassName.trim().length() > 0) {
             this.driverClassName = driverClassName;
         }
@@ -354,7 +358,7 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
      * If specified, {@link Class#forName(String, boolean, ClassLoader)} is
      * used.
      */
-    private ClassLoader driverClassLoader = null;
+    private ClassLoader driverClassLoader;
 
     /**
      * Returns the class loader specified for loading the JDBC driver. Returns
@@ -364,6 +368,7 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
      * {@link #setDriverClassLoader(ClassLoader)}. It does not return the class
      * loader of any driver that may have been set via
      * {@link #setDriver(Driver)}.
+     * @return the classloader
      */
     public synchronized ClassLoader getDriverClassLoader() {
         return this.driverClassLoader;
@@ -381,7 +386,7 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
      *                          driver
      */
     public synchronized void setDriverClassLoader(
-            ClassLoader driverClassLoader) {
+            final ClassLoader driverClassLoader) {
         this.driverClassLoader = driverClassLoader;
     }
 
@@ -396,7 +401,7 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
     /**
      * Returns the LIFO property.
      *
-     * @return true if connection pool behaves as a LIFO queue.
+     * @return <code>true</code> if connection pool behaves as a LIFO queue.
      */
     @Override
     public synchronized boolean getLifo() {
@@ -408,9 +413,8 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
      * false means FIFO.
      *
      * @param lifo the new value for the LIFO property
-     *
      */
-    public synchronized void setLifo(boolean lifo) {
+    public synchronized void setLifo(final boolean lifo) {
         this.lifo = lifo;
         if (connectionPool != null) {
             connectionPool.setLifo(lifo);
@@ -443,7 +447,7 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
      * @param maxTotal the new value for maxTotal
      * @see #getMaxTotal()
      */
-    public synchronized void setMaxTotal(int maxTotal) {
+    public synchronized void setMaxTotal(final int maxTotal) {
         this.maxTotal = maxTotal;
         if (connectionPool != null) {
             connectionPool.setMaxTotal(maxTotal);
@@ -482,7 +486,7 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
      * @see #getMaxIdle()
      * @param maxIdle the new value for maxIdle
      */
-    public synchronized void setMaxIdle(int maxIdle) {
+    public synchronized void setMaxIdle(final int maxIdle) {
         this.maxIdle = maxIdle;
         if (connectionPool != null) {
             connectionPool.setMaxIdle(maxIdle);
@@ -521,7 +525,7 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
      * @param minIdle the new value for minIdle
      * @see GenericObjectPool#setMinIdle(int)
      */
-    public synchronized void setMinIdle(int minIdle) {
+    public synchronized void setMinIdle(final int minIdle) {
        this.minIdle = minIdle;
        if (connectionPool != null) {
            connectionPool.setMinIdle(minIdle);
@@ -555,7 +559,7 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
      * @param initialSize the number of connections created when the pool
      * is initialized
      */
-    public synchronized void setInitialSize(int initialSize) {
+    public synchronized void setInitialSize(final int initialSize) {
         this.initialSize = initialSize;
     }
 
@@ -586,7 +590,7 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
      * @param maxWaitMillis the new value for MaxWaitMillis
      * @see #getMaxWaitMillis()
      */
-    public synchronized void setMaxWaitMillis(long maxWaitMillis) {
+    public synchronized void setMaxWaitMillis(final long maxWaitMillis) {
         this.maxWaitMillis = maxWaitMillis;
         if (connectionPool != null) {
             connectionPool.setMaxWaitMillis(maxWaitMillis);
@@ -602,7 +606,7 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
     /**
      * Returns true if we are pooling statements.
      *
-     * @return true if prepared and callable statements are pooled
+     * @return <code>true</code> if prepared and callable statements are pooled
      */
     @Override
     public synchronized boolean isPoolPreparedStatements() {
@@ -619,7 +623,7 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
      *
      * @param poolingStatements pooling on or off
      */
-    public synchronized void setPoolPreparedStatements(boolean poolingStatements) {
+    public synchronized void setPoolPreparedStatements(final boolean poolingStatements) {
         this.poolPreparedStatements = poolingStatements;
     }
 
@@ -658,7 +662,7 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
      *
      * @param maxOpenStatements the new maximum number of prepared statements
      */
-    public synchronized void setMaxOpenPreparedStatements(int maxOpenStatements) {
+    public synchronized void setMaxOpenPreparedStatements(final int maxOpenStatements) {
         this.maxOpenPreparedStatements = maxOpenStatements;
     }
 
@@ -672,8 +676,8 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
     /**
      * Returns the {@link #testOnCreate} property.
      *
-     * @return true if objects are validated immediately after they are created
-     * by the pool
+     * @return <code>true</code> if objects are validated immediately
+     *  after they are created by the pool
      *
      * @see #testOnCreate
      */
@@ -689,7 +693,7 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
      *
      * @param testOnCreate new value for testOnCreate property
      */
-    public synchronized void setTestOnCreate(boolean testOnCreate) {
+    public synchronized void setTestOnCreate(final boolean testOnCreate) {
         this.testOnCreate = testOnCreate;
         if (connectionPool != null) {
             connectionPool.setTestOnCreate(testOnCreate);
@@ -706,8 +710,8 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
     /**
      * Returns the {@link #testOnBorrow} property.
      *
-     * @return true if objects are validated before being borrowed from the
-     * pool
+     * @return <code>true</code> if objects are validated before being
+     *  borrowed from the pool
      *
      * @see #testOnBorrow
      */
@@ -723,7 +727,7 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
      *
      * @param testOnBorrow new value for testOnBorrow property
      */
-    public synchronized void setTestOnBorrow(boolean testOnBorrow) {
+    public synchronized void setTestOnBorrow(final boolean testOnBorrow) {
         this.testOnBorrow = testOnBorrow;
         if (connectionPool != null) {
             connectionPool.setTestOnBorrow(testOnBorrow);
@@ -739,8 +743,8 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
     /**
      * Returns the value of the {@link #testOnReturn} property.
      *
-     * @return true if objects are validated before being returned to the
-     * pool
+     * @return <code>true</code> if objects are validated before being
+     *  returned to the pool
      * @see #testOnReturn
      */
     public synchronized boolean getTestOnReturn() {
@@ -754,7 +758,7 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
      *
      * @param testOnReturn new value for testOnReturn property
      */
-    public synchronized void setTestOnReturn(boolean testOnReturn) {
+    public synchronized void setTestOnReturn(final boolean testOnReturn) {
         this.testOnReturn = testOnReturn;
         if (connectionPool != null) {
             connectionPool.setTestOnReturn(testOnReturn);
@@ -787,7 +791,7 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
      * @param timeBetweenEvictionRunsMillis the new time between evictor runs
      * @see #timeBetweenEvictionRunsMillis
      */
-    public synchronized void setTimeBetweenEvictionRunsMillis(long timeBetweenEvictionRunsMillis) {
+    public synchronized void setTimeBetweenEvictionRunsMillis(final long timeBetweenEvictionRunsMillis) {
         this.timeBetweenEvictionRunsMillis = timeBetweenEvictionRunsMillis;
         if (connectionPool != null) {
             connectionPool.setTimeBetweenEvictionRunsMillis(timeBetweenEvictionRunsMillis);
@@ -820,7 +824,7 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
      * value
      * @see #numTestsPerEvictionRun
      */
-    public synchronized void setNumTestsPerEvictionRun(int numTestsPerEvictionRun) {
+    public synchronized void setNumTestsPerEvictionRun(final int numTestsPerEvictionRun) {
         this.numTestsPerEvictionRun = numTestsPerEvictionRun;
         if (connectionPool != null) {
             connectionPool.setNumTestsPerEvictionRun(numTestsPerEvictionRun);
@@ -852,7 +856,7 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
      * may sit idle in the pool
      * @see #minEvictableIdleTimeMillis
      */
-    public synchronized void setMinEvictableIdleTimeMillis(long minEvictableIdleTimeMillis) {
+    public synchronized void setMinEvictableIdleTimeMillis(final long minEvictableIdleTimeMillis) {
         this.minEvictableIdleTimeMillis = minEvictableIdleTimeMillis;
         if (connectionPool != null) {
             connectionPool.setMinEvictableIdleTimeMillis(minEvictableIdleTimeMillis);
@@ -879,7 +883,7 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
      * assuming there are minIdle idle connections in the pool.
      * @see #getSoftMinEvictableIdleTimeMillis
      */
-    public synchronized void setSoftMinEvictableIdleTimeMillis(long softMinEvictableIdleTimeMillis) {
+    public synchronized void setSoftMinEvictableIdleTimeMillis(final long softMinEvictableIdleTimeMillis) {
         this.softMinEvictableIdleTimeMillis = softMinEvictableIdleTimeMillis;
         if (connectionPool != null) {
             connectionPool.setSoftMinEvictableIdleTimeMillis(softMinEvictableIdleTimeMillis);
@@ -892,8 +896,8 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
      * the extra condition that at least "minIdle" connections remain in the
      * pool.</p>
      *
-     * <p>When {@link #getMinEvictableIdleTimeMillis() miniEvictableIdleTimeMillis}
-     * is set to a positive value, miniEvictableIdleTimeMillis is examined
+     * <p>When {@link #getMinEvictableIdleTimeMillis() minEvictableIdleTimeMillis}
+     * is set to a positive value, minEvictableIdleTimeMillis is examined
      * first by the idle connection evictor - i.e. when idle connections are
      * visited by the evictor, idle time is first compared against
      * {@code minEvictableIdleTimeMillis} (without considering the number of idle
@@ -915,6 +919,7 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
 
     /**
      * Gets the EvictionPolicy implementation in use with this connection pool.
+     * @return the eviction policy
      */
     public synchronized String getEvictionPolicyClassName() {
         return evictionPolicyClassName;
@@ -927,7 +932,7 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
      *                                  EvictionPolicy implementation
      */
     public synchronized void setEvictionPolicyClassName(
-            String evictionPolicyClassName) {
+            final String evictionPolicyClassName) {
         if (connectionPool != null) {
             connectionPool.setEvictionPolicyClassName(evictionPolicyClassName);
         }
@@ -944,8 +949,8 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
     /**
      * Returns the value of the {@link #testWhileIdle} property.
      *
-     * @return true if objects examined by the idle object evictor are
-     * validated
+     * @return <code>true</code> if objects examined by
+     *  the idle object evictor are validated
      * @see #testWhileIdle
      */
     @Override
@@ -959,7 +964,7 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
      *
      * @param testWhileIdle new value for testWhileIdle property
      */
-    public synchronized void setTestWhileIdle(boolean testWhileIdle) {
+    public synchronized void setTestWhileIdle(final boolean testWhileIdle) {
         this.testWhileIdle = testWhileIdle;
         if (connectionPool != null) {
             connectionPool.setTestWhileIdle(testWhileIdle);
@@ -973,9 +978,11 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
      * @return the current number of active connections
      */
     @Override
-    public synchronized int getNumActive() {
-        if (connectionPool != null) {
-            return connectionPool.getNumActive();
+    public int getNumActive() {
+        // Copy reference to avoid NPE if close happens after null check
+        final GenericObjectPool<PoolableConnection> pool = connectionPool;
+        if (pool != null) {
+            return pool.getNumActive();
         }
         return 0;
     }
@@ -988,9 +995,11 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
      * @return the current number of idle connections
      */
     @Override
-    public synchronized int getNumIdle() {
-        if (connectionPool != null) {
-            return connectionPool.getNumIdle();
+    public int getNumIdle() {
+        // Copy reference to avoid NPE if close happens after null check
+        final GenericObjectPool<PoolableConnection> pool = connectionPool;
+        if (pool != null) {
+            return pool.getNumIdle();
         }
         return 0;
     }
@@ -999,7 +1008,7 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
      * The connection password to be passed to our JDBC driver to establish
      * a connection.
      */
-    private volatile String password = null;
+    private volatile String password;
 
     /**
      * Returns the password passed to the JDBC driver to establish connections.
@@ -1021,7 +1030,7 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
      *
      * @param password new value for the password
      */
-    public void setPassword(String password) {
+    public void setPassword(final String password) {
         this.password = password;
     }
 
@@ -1029,7 +1038,7 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
      * The connection URL to be passed to our JDBC driver to establish
      * a connection.
      */
-    private String url = null;
+    private String url;
 
     /**
      * Returns the JDBC connection {@link #url} property.
@@ -1052,7 +1061,7 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
      *
      * @param url the new value for the JDBC connection url
      */
-    public synchronized void setUrl(String url) {
+    public synchronized void setUrl(final String url) {
         this.url = url;
     }
 
@@ -1060,7 +1069,7 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
      * The connection username to be passed to our JDBC driver to
      * establish a connection.
      */
-    private String username = null;
+    private String username;
 
     /**
      * Returns the JDBC connection {@link #username} property.
@@ -1083,7 +1092,7 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
      *
      * @param username the new value for the JDBC connection username
      */
-    public void setUsername(String username) {
+    public void setUsername(final String username) {
         this.username = username;
     }
 
@@ -1094,7 +1103,7 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
      * one row. If not specified, {@link Connection#isValid(int)} will be used
      * to validate connections.
      */
-    private volatile String validationQuery = null;
+    private volatile String validationQuery;
 
     /**
      * Returns the validation query used to validate connections before
@@ -1118,7 +1127,7 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
      *
      * @param validationQuery the new value for the validation query
      */
-    public void setValidationQuery(String validationQuery) {
+    public void setValidationQuery(final String validationQuery) {
         if (validationQuery != null && validationQuery.trim().length() > 0) {
             this.validationQuery = validationQuery;
         } else {
@@ -1154,7 +1163,7 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
      *
      * @param timeout new validation query timeout value in seconds
      */
-    public void setValidationQueryTimeout(int timeout) {
+    public void setValidationQueryTimeout(final int timeout) {
         this.validationQueryTimeout = timeout;
     }
 
@@ -1176,7 +1185,7 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
      * @return initialization SQL statements
      */
     public List<String> getConnectionInitSqls() {
-        List<String> result = connectionInitSqls;
+        final List<String> result = connectionInitSqls;
         if (result == null) {
             return Collections.emptyList();
         }
@@ -1189,7 +1198,7 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
      */
     @Override
     public String[] getConnectionInitSqlsAsArray() {
-        Collection<String> result = getConnectionInitSqls();
+        final Collection<String> result = getConnectionInitSqls();
         return result.toArray(new String[result.size()]);
     }
 
@@ -1205,10 +1214,10 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
      * @param connectionInitSqls Collection of SQL statements to execute
      * on connection creation
      */
-    public void setConnectionInitSqls(Collection<String> connectionInitSqls) {
+    public void setConnectionInitSqls(final Collection<String> connectionInitSqls) {
         if (connectionInitSqls != null && connectionInitSqls.size() > 0) {
             ArrayList<String> newVal = null;
-            for (String s : connectionInitSqls) {
+            for (final String s : connectionInitSqls) {
             if (s != null && s.trim().length() > 0) {
                     if (newVal == null) {
                         newVal = new ArrayList<>();
@@ -1251,7 +1260,7 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
      *
      * @param allow Access to the underlying connection is granted when true.
      */
-    public synchronized void setAccessToUnderlyingConnectionAllowed(boolean allow) {
+    public synchronized void setAccessToUnderlyingConnectionAllowed(final boolean allow) {
         this.accessToUnderlyingConnectionAllowed = allow;
     }
 
@@ -1267,6 +1276,20 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
         return maxConnLifetimeMillis;
     }
 
+    private boolean logExpiredConnections = true;
+
+    /**
+     * When {@link #getMaxConnLifetimeMillis()} is set to limit connection lifetime,
+     * this property determines whether or not log messages are generated when the
+     * pool closes connections due to maximum lifetime exceeded.
+     *
+     * @since 2.1
+     */
+    @Override
+    public boolean getLogExpiredConnections() {
+        return logExpiredConnections;
+    }
+
     /**
      * <p>Sets the maximum permitted lifetime of a connection in
      * milliseconds. A value of zero or less indicates an infinite lifetime.</p>
@@ -1275,15 +1298,27 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
      * initialized.  The pool is initialized the first time one of the
      * following methods is invoked: <code>getConnection, setLogwriter,
      * setLoginTimeout, getLoginTimeout, getLogWriter.</code></p>
+     * @param maxConnLifetimeMillis The maximum connection lifetime
      */
-    public void setMaxConnLifetimeMillis(long maxConnLifetimeMillis) {
+    public void setMaxConnLifetimeMillis(final long maxConnLifetimeMillis) {
         this.maxConnLifetimeMillis = maxConnLifetimeMillis;
     }
 
-    private String jmxName = null;
+    /**
+     * When {@link #getMaxConnLifetimeMillis()} is set to limit connection lifetime,
+     * this property determines whether or not log messages are generated when the
+     * pool closes connections due to maximum lifetime exceeded.  Set this property
+     * to false to suppress log messages when connections expire.
+     * @param logExpiredConnections <code>true</code> to log expired connections
+     */
+    public void setLogExpiredConnections(final boolean logExpiredConnections) {
+        this.logExpiredConnections = logExpiredConnections;
+    }
+
+    private String jmxName;
 
     /**
-     * Returns the JMX name that has been requested for this DataSource. If the
+     * @return the JMX name that has been requested for this DataSource. If the
      * requested name is not valid, an alternative may be chosen.
      */
     public String getJmxName() {
@@ -1296,8 +1331,9 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
      * DataSource will attempt to register itself using this name. If another
      * component registers this DataSource with JMX and this name is valid this
      * name will be used in preference to any specified by the other component.
+     * @param jmxName The JMX name
      */
-    public void setJmxName(String jmxName) {
+    public void setJmxName(final String jmxName) {
         this.jmxName = jmxName;
     }
 
@@ -1306,10 +1342,11 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
 
     /**
      * Returns the value of the flag that controls whether or not connections
-     * being returned to the pool will checked and configured with
+     * being returned to the pool will be checked and configured with
      * {@link Connection#setAutoCommit(boolean) Connection.setAutoCommit(true)}
      * if the auto commit setting is {@code false} when the connection
      * is returned. It is <code>true</code> by default.
+     * @return <code>true</code> to commit automatically
      */
     public boolean getEnableAutoCommitOnReturn() {
         return enableAutoCommitOnReturn;
@@ -1317,15 +1354,15 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
 
     /**
      * Sets the value of the flag that controls whether or not connections
-     * being returned to the pool will checked and configured with
+     * being returned to the pool will be checked and configured with
      * {@link Connection#setAutoCommit(boolean) Connection.setAutoCommit(true)}
      * if the auto commit setting is {@code false} when the connection
      * is returned. It is <code>true</code> by default.
+     * @param enableAutoCommitOnReturn The new value
      */
-    public void setEnableAutoCommitOnReturn(boolean enableAutoCommitOnReturn) {
+    public void setEnableAutoCommitOnReturn(final boolean enableAutoCommitOnReturn) {
         this.enableAutoCommitOnReturn = enableAutoCommitOnReturn;
     }
-
 
     private boolean rollbackOnReturn = true;
 
@@ -1333,6 +1370,7 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
      * Gets the current value of the flag that controls if a connection will be
      * rolled back when it is returned to the pool if auto commit is not enabled
      * and the connection is not read only.
+     * @return <code>true</code> to rollback non committed connections
      */
     public boolean getRollbackOnReturn() {
         return rollbackOnReturn;
@@ -1342,18 +1380,111 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
      * Sets the flag that controls if a connection will be rolled back when it
      * is returned to the pool if auto commit is not enabled and the connection
      * is not read only.
+     * @param rollbackOnReturn The new value
      */
-    public void setRollbackOnReturn(boolean rollbackOnReturn) {
+    public void setRollbackOnReturn(final boolean rollbackOnReturn) {
         this.rollbackOnReturn = rollbackOnReturn;
     }
 
+    private volatile Set<String> disconnectionSqlCodes;
+
+    /**
+     * Returns the set of SQL_STATE codes considered to signal fatal conditions.
+     * @return fatal disconnection state codes
+     * @see #setDisconnectionSqlCodes(Collection)
+     * @since 2.1
+     */
+    public Set<String> getDisconnectionSqlCodes() {
+        final Set<String> result = disconnectionSqlCodes;
+        if (result == null) {
+            return Collections.emptySet();
+        }
+        return result;
+    }
+
+    /**
+     * Provides the same data as {@link #getDisconnectionSqlCodes} but in an
+     * array so it is accessible via JMX.
+     * @return fatal disconnection state codes
+     * @since 2.1
+     */
+    @Override
+    public String[] getDisconnectionSqlCodesAsArray() {
+        final Collection<String> result = getDisconnectionSqlCodes();
+        return result.toArray(new String[result.size()]);
+    }
+
+    /**
+     * Sets the SQL_STATE codes considered to signal fatal conditions.
+     * <p>
+     * Overrides the defaults in {@link Utils#DISCONNECTION_SQL_CODES}
+     * (plus anything starting with {@link Utils#DISCONNECTION_SQL_CODE_PREFIX}).
+     * If this property is non-null and {@link #getFastFailValidation()} is
+     * {@code true}, whenever connections created by this datasource generate exceptions
+     * with SQL_STATE codes in this list, they will be marked as "fatally disconnected"
+     * and subsequent validations will fail fast (no attempt at isValid or validation
+     * query).</p>
+     * <p>
+     * If {@link #getFastFailValidation()} is {@code false} setting this property has no
+     * effect.</p>
+     * <p>
+     * Note: this method currently has no effect once the pool has been
+     * initialized.  The pool is initialized the first time one of the
+     * following methods is invoked: {@code getConnection, setLogwriter,
+     * setLoginTimeout, getLoginTimeout, getLogWriter}.</p>
+     *
+     * @param disconnectionSqlCodes SQL_STATE codes considered to signal fatal conditions
+     * @since 2.1
+     */
+    public void setDisconnectionSqlCodes(final Collection<String> disconnectionSqlCodes) {
+        if (disconnectionSqlCodes != null && disconnectionSqlCodes.size() > 0) {
+            HashSet<String> newVal = null;
+            for (final String s : disconnectionSqlCodes) {
+            if (s != null && s.trim().length() > 0) {
+                    if (newVal == null) {
+                        newVal = new HashSet<>();
+                    }
+                    newVal.add(s);
+                }
+            }
+            this.disconnectionSqlCodes = newVal;
+        } else {
+            this.disconnectionSqlCodes = null;
+        }
+    }
+
+    private boolean fastFailValidation;
+
+    /**
+     * True means that validation will fail immediately for connections that
+     * have previously thrown SQLExceptions with SQL_STATE indicating fatal
+     * disconnection errors.
+     *
+     * @return true if connections created by this datasource will fast fail validation.
+     * @see #setDisconnectionSqlCodes(Collection)
+     * @since 2.1
+     */
+    @Override
+    public boolean getFastFailValidation() {
+        return fastFailValidation;
+    }
+
+    /**
+     * @see #getFastFailValidation()
+     * @param fastFailValidation true means connections created by this factory will
+     * fast fail validation
+     * @since 2.1
+     */
+    public void setFastFailValidation(final boolean fastFailValidation) {
+        this.fastFailValidation = fastFailValidation;
+    }
 
     // ----------------------------------------------------- Instance Variables
 
     /**
      * The object pool that internally manages our connections.
      */
-    private volatile GenericObjectPool<PoolableConnection> connectionPool = null;
+    private volatile GenericObjectPool<PoolableConnection> connectionPool;
 
     protected GenericObjectPool<PoolableConnection> getConnectionPool() {
         return connectionPool;
@@ -1377,7 +1508,7 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
      * be acquired <strong>ONLY</strong> by calls to the
      * <code>createDataSource()</code> method.
      */
-    private volatile DataSource dataSource = null;
+    private volatile DataSource dataSource;
 
     /**
      * The PrintWriter to which log messages should be directed.
@@ -1398,11 +1529,11 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
     @Override
     public Connection getConnection() throws SQLException {
         if (Utils.IS_SECURITY_ENABLED) {
-            PrivilegedExceptionAction<Connection> action = new PaGetConnection();
+            final PrivilegedExceptionAction<Connection> action = new PaGetConnection();
             try {
                 return AccessController.doPrivileged(action);
-            } catch (PrivilegedActionException e) {
-                Throwable cause = e.getCause();
+            } catch (final PrivilegedActionException e) {
+                final Throwable cause = e.getCause();
                 if (cause instanceof SQLException) {
                     throw (SQLException) cause;
                 }
@@ -1420,12 +1551,12 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
      *   is being made
      * @param pass The database user's password
      *
-     * @throws UnsupportedOperationException
+     * @throws UnsupportedOperationException This is not supported
      * @throws SQLException if a database access error occurs
      * @return nothing - always throws UnsupportedOperationException
      */
     @Override
-    public Connection getConnection(String user, String pass) throws SQLException {
+    public Connection getConnection(final String user, final String pass) throws SQLException {
         // This method isn't supported by the PoolingDataSource returned by
         // the createDataSource
         throw new UnsupportedOperationException("Not supported by BasicDataSource");
@@ -1483,7 +1614,7 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
      * @throws SQLException if a database access error occurs
      */
     @Override
-    public void setLoginTimeout(int loginTimeout) throws SQLException {
+    public void setLoginTimeout(final int loginTimeout) throws SQLException {
         // This method isn't supported by the PoolingDataSource returned by
         // the createDataSource
         throw new UnsupportedOperationException("Not supported by BasicDataSource");
@@ -1500,7 +1631,7 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
      * @throws SQLException if a database access error occurs
      */
     @Override
-    public void setLogWriter(PrintWriter logWriter) throws SQLException {
+    public void setLogWriter(final PrintWriter logWriter) throws SQLException {
         createDataSource().setLogWriter(logWriter);
         this.logWriter = logWriter;
     }
@@ -1511,17 +1642,16 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
      * <p>Flag to remove abandoned connections if they exceed the
      * removeAbandonedTimeout when borrowObject is invoked.</p>
      *
-     * <p>The default value is false.<p>
+     * <p>The default value is false.</p>
      *
      * <p>If set to true a connection is considered abandoned and eligible
      * for removal if it has not been used for more than
      * {@link #getRemoveAbandonedTimeout() removeAbandonedTimeout} seconds.</p>
      *
      * <p>Abandoned connections are identified and removed when
-     * {@link #getConnection()} is invoked and the following conditions hold:
+     * {@link #getConnection()} is invoked and all of the following conditions hold:
      * </p>
-     * <ul><li>{@link #getRemoveAbandonedOnBorrow()} or
-     *         {@link #getRemoveAbandonedOnMaintenance()} = true</li>
+     * <ul><li>{@link #getRemoveAbandonedOnBorrow()} </li>
      *     <li>{@link #getNumActive()} &gt; {@link #getMaxTotal()} - 3 </li>
      *     <li>{@link #getNumIdle()} &lt; 2 </li></ul>
      *
@@ -1536,46 +1666,32 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
     }
 
     /**
-     * <p>Flag to remove abandoned connections if they exceed the
-     * removeAbandonedTimeout when borrowObject is invoked.</p>
-     *
-     * <p>If set to true a connection is considered abandoned and eligible
-     * for removal if it has been idle longer than the
-     * {@link #getRemoveAbandonedTimeout() removeAbandonedTimeout}.</p>
-     *
-     * <p>Setting this to true can recover db connections from poorly written
-     * applications which fail to close a connection.</p>
-     *
-     * @param removeAbandonedOnMaintenance true means abandoned connections will
-     *                                     be removed when borrowObject is
-     *                                     invoked
+     * @param removeAbandonedOnMaintenance true means abandoned connections may
+     *                                     be removed on pool maintenance.
+     * @see #getRemoveAbandonedOnMaintenance()
      */
     public void setRemoveAbandonedOnMaintenance(
-            boolean removeAbandonedOnMaintenance) {
+            final boolean removeAbandonedOnMaintenance) {
         if (abandonedConfig == null) {
             abandonedConfig = new AbandonedConfig();
         }
         abandonedConfig.setRemoveAbandonedOnMaintenance(
                 removeAbandonedOnMaintenance);
+        final GenericObjectPool<?> gop = this.connectionPool;
+        if (gop != null) {
+            gop.setAbandonedConfig(abandonedConfig);
+        }
     }
 
     /**
      * <p>Flag to remove abandoned connections if they exceed the
      * removeAbandonedTimeout during pool maintenance.</p>
      *
-     * <p>The default value is false.<p>
+     * <p>The default value is false.</p>
      *
      * <p>If set to true a connection is considered abandoned and eligible
      * for removal if it has not been used for more than
      * {@link #getRemoveAbandonedTimeout() removeAbandonedTimeout} seconds.</p>
-     *
-     * <p>Abandoned connections are identified and removed when
-     * {@link #getConnection()} is invoked and the following conditions hold:
-     * </p>
-     * <ul><li>{@link #getRemoveAbandonedOnBorrow()} or
-     *         {@link #getRemoveAbandonedOnMaintenance()} = true</li>
-     *     <li>{@link #getNumActive()} &gt; {@link #getMaxTotal()} - 3 </li>
-     *     <li>{@link #getNumIdle()} &lt; 2 </li></ul>
      *
      * @see #getRemoveAbandonedTimeout()
      */
@@ -1588,24 +1704,19 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
     }
 
     /**
-     * <p>Flag to remove abandoned connections if they exceed the
-     * removeAbandonedTimeout during pool maintenance.</p>
-     *
-     * <p>If set to true a connection is considered abandoned and eligible
-     * for removal if it has been idle longer than the
-     * {@link #getRemoveAbandonedTimeout() removeAbandonedTimeout}.</p>
-     *
-     * <p>Setting this to true can recover db connections from poorly written
-     * applications which fail to close a connection.</p>
-     *
-     * @param removeAbandonedOnBorrow true means abandoned connections will be
-     *                                removed during pool maintenance
+     * @param removeAbandonedOnBorrow true means abandoned connections may be
+     *                                removed when connections are borrowed from the pool.
+     * @see #getRemoveAbandonedOnBorrow()
      */
-    public void setRemoveAbandonedOnBorrow(boolean removeAbandonedOnBorrow) {
+    public void setRemoveAbandonedOnBorrow(final boolean removeAbandonedOnBorrow) {
         if (abandonedConfig == null) {
             abandonedConfig = new AbandonedConfig();
         }
         abandonedConfig.setRemoveAbandonedOnBorrow(removeAbandonedOnBorrow);
+        final GenericObjectPool<?> gop = this.connectionPool;
+        if (gop != null) {
+            gop.setAbandonedConfig(abandonedConfig);
+        }
     }
 
     /**
@@ -1646,11 +1757,15 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
      * @see #getRemoveAbandonedOnBorrow()
      * @see #getRemoveAbandonedOnMaintenance()
      */
-    public void setRemoveAbandonedTimeout(int removeAbandonedTimeout) {
+    public void setRemoveAbandonedTimeout(final int removeAbandonedTimeout) {
         if (abandonedConfig == null) {
             abandonedConfig = new AbandonedConfig();
         }
         abandonedConfig.setRemoveAbandonedTimeout(removeAbandonedTimeout);
+        final GenericObjectPool<?> gop = this.connectionPool;
+        if (gop != null) {
+            gop.setAbandonedConfig(abandonedConfig);
+        }
     }
 
     /**
@@ -1674,16 +1789,21 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
     /**
      * @param logAbandoned new logAbandoned property value
      */
-    public void setLogAbandoned(boolean logAbandoned) {
+    public void setLogAbandoned(final boolean logAbandoned) {
         if (abandonedConfig == null) {
             abandonedConfig = new AbandonedConfig();
         }
         abandonedConfig.setLogAbandoned(logAbandoned);
+        final GenericObjectPool<?> gop = this.connectionPool;
+        if (gop != null) {
+            gop.setAbandonedConfig(abandonedConfig);
+        }
     }
 
     /**
      * Gets the log writer to be used by this configuration to log
      * information on abandoned objects.
+     * @return the log writer
      */
     public PrintWriter getAbandonedLogWriter() {
         if (abandonedConfig != null) {
@@ -1698,11 +1818,15 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
      *
      * @param logWriter The new log writer
      */
-    public void setAbandonedLogWriter(PrintWriter logWriter) {
+    public void setAbandonedLogWriter(final PrintWriter logWriter) {
         if (abandonedConfig == null) {
             abandonedConfig = new AbandonedConfig();
         }
         abandonedConfig.setLogWriter(logWriter);
+        final GenericObjectPool<?> gop = this.connectionPool;
+        if (gop != null) {
+            gop.setAbandonedConfig(abandonedConfig);
+        }
     }
 
     /**
@@ -1731,11 +1855,15 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
      *                              the recording of a stack trace on every use
      *                              of a pooled connection
      */
-    public void setAbandonedUsageTracking(boolean usageTracking) {
+    public void setAbandonedUsageTracking(final boolean usageTracking) {
         if (abandonedConfig == null) {
             abandonedConfig = new AbandonedConfig();
         }
         abandonedConfig.setUseUsageTracking(usageTracking);
+        final GenericObjectPool<?> gop = this.connectionPool;
+        if (gop != null) {
+            gop.setAbandonedConfig(abandonedConfig);
+        }
     }
 
     // --------------------------------------------------------- Public Methods
@@ -1750,7 +1878,7 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
      * @param name Name of the custom connection property
      * @param value Value of the custom connection property
      */
-    public void addConnectionProperty(String name, String value) {
+    public void addConnectionProperty(final String name, final String value) {
         connectionProperties.put(name, value);
     }
 
@@ -1760,7 +1888,7 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
      * @param name Name of the custom connection property to remove
      * @see #addConnectionProperty(String, String)
      */
-    public void removeConnectionProperty(String name) {
+    public void removeConnectionProperty(final String name) {
         connectionProperties.remove(name);
     }
 
@@ -1775,19 +1903,19 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
      * @param connectionProperties the connection properties used to
      * create new connections
      */
-    public void setConnectionProperties(String connectionProperties) {
+    public void setConnectionProperties(final String connectionProperties) {
         if (connectionProperties == null) {
             throw new NullPointerException("connectionProperties is null");
         }
 
-        String[] entries = connectionProperties.split(";");
-        Properties properties = new Properties();
-        for (String entry : entries) {
+        final String[] entries = connectionProperties.split(";");
+        final Properties properties = new Properties();
+        for (final String entry : entries) {
             if (entry.length() > 0) {
-                int index = entry.indexOf('=');
+                final int index = entry.indexOf('=');
                 if (index > 0) {
-                    String name = entry.substring(0, index);
-                    String value = entry.substring(index + 1);
+                    final String name = entry.substring(0, index);
+                    final String value = entry.substring(index + 1);
                     properties.setProperty(name, value);
                 } else {
                     // no value is empty string which is how java.util.Properties works
@@ -1809,36 +1937,37 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
      * these connections to the pool, the underlying JDBC connections are closed.</p>
      *
      * <p>Attempts to acquire connections using {@link #getConnection()} after this method has been
-     * invoked result in SQLExceptions.<p>
+     * invoked result in SQLExceptions.</p>
      *
      * <p>This method is idempotent - i.e., closing an already closed BasicDataSource has no effect
      * and does not generate exceptions.</p>
      *
      * @throws SQLException if an error occurs closing idle connections
      */
+    @Override
     public synchronized void close() throws SQLException {
         if (registeredJmxName != null) {
-            MBeanServer mbs = ManagementFactory.getPlatformMBeanServer();
+            final MBeanServer mbs = ManagementFactory.getPlatformMBeanServer();
             try {
                 mbs.unregisterMBean(registeredJmxName);
-            } catch (JMException e) {
+            } catch (final JMException e) {
                 log.warn("Failed to unregister the JMX name: " + registeredJmxName, e);
             } finally {
                 registeredJmxName = null;
             }
         }
         closed = true;
-        GenericObjectPool<?> oldpool = connectionPool;
+        final GenericObjectPool<?> oldpool = connectionPool;
         connectionPool = null;
         dataSource = null;
         try {
             if (oldpool != null) {
                 oldpool.close();
             }
-        } catch(RuntimeException e) {
+        } catch(final RuntimeException e) {
             throw e;
-        } catch(Exception e) {
-            throw new SQLException("Cannot close connection pool", e);
+        } catch(final Exception e) {
+            throw new SQLException(Utils.getMessage("pool.close.fail"), e);
         }
     }
 
@@ -1852,12 +1981,12 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
     }
 
     @Override
-    public boolean isWrapperFor(Class<?> iface) throws SQLException {
+    public boolean isWrapperFor(final Class<?> iface) throws SQLException {
         return false;
     }
 
     @Override
-    public <T> T unwrap(Class<T> iface) throws SQLException {
+    public <T> T unwrap(final Class<T> iface) throws SQLException {
         throw new SQLException("BasicDataSource is not a wrapper.");
     }
 
@@ -1869,12 +1998,12 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
     /**
      * Manually invalidates a connection, effectively requesting the pool to try
      * to close it, remove it from the pool and reclaim pool capacity.
-     *
+     * @param connection The connection to close
      * @throws IllegalStateException
      *             if invalidating the connection failed.
      * @since 2.1
      */
-    public void invalidateConnection(Connection connection) throws IllegalStateException {
+    public void invalidateConnection(final Connection connection) throws IllegalStateException {
         if (connection == null) {
             return;
         }
@@ -1889,20 +2018,13 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
                 throw new IllegalStateException(
                         "Cannot invalidate connection: Connection is not a poolable connection.");
             }
-        } catch (SQLException e) {
+        } catch (final SQLException e) {
             throw new IllegalStateException("Cannot invalidate connection: Unwrapping poolable connection failed.", e);
-        }
-
-        // attempt to close the connection for good measure
-        try {
-            connection.close();
-        } catch (Exception e) {
-            // ignore any exceptions here
         }
 
         try {
             connectionPool.invalidateObject(poolableConnection);
-        } catch (Exception e) {
+        } catch (final Exception e) {
             throw new IllegalStateException("Invalidating connection threw unexpected exception", e);
         }
     }
@@ -1913,7 +2035,7 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
     /**
      * <p>Create (if necessary) and return the internal data source we are
      * using to manage our connections.</p>
-     *
+     * @return the data source
      * @throws SQLException if the object pool cannot be created.
      */
     protected DataSource createDataSource()
@@ -1936,7 +2058,7 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
             jmxRegister();
 
             // create factory which returns raw physical connections
-            ConnectionFactory driverConnectionFactory = createConnectionFactory();
+            final ConnectionFactory driverConnectionFactory = createConnectionFactory();
 
             // Set up the poolable connection factory
             boolean success = false;
@@ -1946,14 +2068,14 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
                         driverConnectionFactory);
                 poolableConnectionFactory.setPoolStatements(
                         poolPreparedStatements);
-                poolableConnectionFactory.setMaxOpenPrepatedStatements(
+                poolableConnectionFactory.setMaxOpenPreparedStatements(
                         maxOpenPreparedStatements);
                 success = true;
-            } catch (SQLException se) {
+            } catch (final SQLException se) {
                 throw se;
-            } catch (RuntimeException rte) {
+            } catch (final RuntimeException rte) {
                 throw rte;
-            } catch (Exception ex) {
+            } catch (final Exception ex) {
                 throw new SQLException("Error creating connection factory", ex);
             }
 
@@ -1963,16 +2085,17 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
             }
 
             // Create the pooling data source to manage connections
+            DataSource newDataSource;
             success = false;
             try {
-                dataSource = createDataSourceInstance();
-                dataSource.setLogWriter(logWriter);
+                newDataSource = createDataSourceInstance();
+                newDataSource.setLogWriter(logWriter);
                 success = true;
-            } catch (SQLException se) {
+            } catch (final SQLException se) {
                 throw se;
-            } catch (RuntimeException rte) {
+            } catch (final RuntimeException rte) {
                 throw rte;
-            } catch (Exception ex) {
+            } catch (final Exception ex) {
                 throw new SQLException("Error creating datasource", ex);
             } finally {
                 if (!success) {
@@ -1985,7 +2108,7 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
                 for (int i = 0 ; i < initialSize ; i++) {
                     connectionPool.addObject();
                 }
-            } catch (Exception e) {
+            } catch (final Exception e) {
                 closeConnectionPool();
                 throw new SQLException("Error preloading the connection pool", e);
             }
@@ -1993,6 +2116,7 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
             // If timeBetweenEvictionRunsMillis > 0, start the pool's evictor task
             startPoolMaintenance();
 
+            dataSource = newDataSource;
             return dataSource;
         }
     }
@@ -2014,6 +2138,8 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
      * {@link DriverManager} using the specified {@link #url}.
      * </ol>
      * This method exists so subclasses can replace the implementation class.
+     * @return the connection factory
+     * @throws SQLException Error creating connection factory
      */
     protected ConnectionFactory createConnectionFactory() throws SQLException {
         // Load the JDBC driver class
@@ -2030,13 +2156,13 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
                             driverFromCCL = Class.forName(
                                     driverClassName, true, driverClassLoader);
                         }
-                    } catch (ClassNotFoundException cnfe) {
+                    } catch (final ClassNotFoundException cnfe) {
                         driverFromCCL = Thread.currentThread(
                                 ).getContextClassLoader().loadClass(
                                         driverClassName);
                     }
-                } catch (Exception t) {
-                    String message = "Cannot load JDBC driver class '" +
+                } catch (final Exception t) {
+                    final String message = "Cannot load JDBC driver class '" +
                         driverClassName + "'";
                     logWriter.println(message);
                     t.printStackTrace(logWriter);
@@ -2051,13 +2177,13 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
                     // Usage of DriverManager is not possible, as it does not
                     // respect the ContextClassLoader
                     // N.B. This cast may cause ClassCastException which is handled below
-                    driverToUse = (Driver) driverFromCCL.newInstance();
+                    driverToUse = (Driver) driverFromCCL.getConstructor().newInstance();
                     if (!driverToUse.acceptsURL(url)) {
                         throw new SQLException("No suitable driver", "08001");
                     }
                 }
-            } catch (Exception t) {
-                String message = "Cannot create JDBC driver of class '" +
+            } catch (final Exception t) {
+                final String message = "Cannot create JDBC driver of class '" +
                     (driverClassName != null ? driverClassName : "") +
                     "' for connect URL '" + url + "'";
                 logWriter.println(message);
@@ -2067,21 +2193,21 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
         }
 
         // Set up the driver connection factory we will use
-        String user = username;
+        final String user = username;
         if (user != null) {
             connectionProperties.put("user", user);
         } else {
             log("DBCP DataSource configured without a 'username'");
         }
 
-        String pwd = password;
+        final String pwd = password;
         if (pwd != null) {
             connectionProperties.put("password", pwd);
         } else {
             log("DBCP DataSource configured without a 'password'");
         }
 
-        ConnectionFactory driverConnectionFactory =
+        final ConnectionFactory driverConnectionFactory =
                 new DriverConnectionFactory(driverToUse, url, connectionProperties);
         return driverConnectionFactory;
     }
@@ -2095,20 +2221,14 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
      * {@link #startPoolMaintenance()}, since setting timeBetweenEvictionRunsMillis
      * to a positive value causes {@link GenericObjectPool}'s eviction timer
      * to be started.
+     * @param factory The connection factory
      */
-    protected void createConnectionPool(PoolableConnectionFactory factory) {
+    protected void createConnectionPool(final PoolableConnectionFactory factory) {
         // Create an object pool to contain our active connections
-        GenericObjectPoolConfig config = new GenericObjectPoolConfig();
+        final GenericObjectPoolConfig config = new GenericObjectPoolConfig();
         updateJmxName(config);
-        GenericObjectPool<PoolableConnection> gop;
-        if (abandonedConfig != null &&
-                (abandonedConfig.getRemoveAbandonedOnBorrow() ||
-                 abandonedConfig.getRemoveAbandonedOnMaintenance())) {
-            gop = new GenericObjectPool<>(factory, config, abandonedConfig);
-        }
-        else {
-            gop = new GenericObjectPool<>(factory, config);
-        }
+        config.setJmxEnabled(registeredJmxName != null);  // Disable JMX on the underlying pool if the DS is not registered.
+        final GenericObjectPool<PoolableConnection> gop = createObjectPool(factory, config, abandonedConfig);
         gop.setMaxTotal(maxTotal);
         gop.setMaxIdle(maxIdle);
         gop.setMinIdle(minIdle);
@@ -2118,25 +2238,49 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
         gop.setTestOnReturn(testOnReturn);
         gop.setNumTestsPerEvictionRun(numTestsPerEvictionRun);
         gop.setMinEvictableIdleTimeMillis(minEvictableIdleTimeMillis);
+        gop.setSoftMinEvictableIdleTimeMillis(softMinEvictableIdleTimeMillis);
         gop.setTestWhileIdle(testWhileIdle);
         gop.setLifo(lifo);
-        gop.setSwallowedExceptionListener(new SwallowedExceptionLogger(log));
+        gop.setSwallowedExceptionListener(new SwallowedExceptionLogger(log, logExpiredConnections));
         gop.setEvictionPolicyClassName(evictionPolicyClassName);
         factory.setPool(gop);
         connectionPool = gop;
     }
 
     /**
+     * Creates an object pool used to provide pooling support for {@link Connection JDBC connections}.
+     *
+     * @param factory         the object factory
+     * @param poolConfig      the object pool configuration
+     * @param abandonedConfig the abandoned objects configuration
+     * @return a non-null instance
+     */
+    protected  GenericObjectPool<PoolableConnection> createObjectPool(
+            final PoolableConnectionFactory factory, final GenericObjectPoolConfig poolConfig,
+            final AbandonedConfig abandonedConfig) {
+        GenericObjectPool<PoolableConnection> gop;
+        if (abandonedConfig != null &&
+                (abandonedConfig.getRemoveAbandonedOnBorrow() ||
+                        abandonedConfig.getRemoveAbandonedOnMaintenance())) {
+            gop = new GenericObjectPool<>(factory, poolConfig, abandonedConfig);
+        }
+        else {
+            gop = new GenericObjectPool<>(factory, poolConfig);
+        }
+        return gop;
+    }
+
+    /**
      * Closes the connection pool, silently swallowing any exception that occurs.
      */
     private void closeConnectionPool() {
-        GenericObjectPool<?> oldpool = connectionPool;
+        final GenericObjectPool<?> oldpool = connectionPool;
         connectionPool = null;
         try {
             if (oldpool != null) {
                 oldpool.close();
             }
-        } catch(Exception e) {
+        } catch(final Exception e) {
             /* Ignore */
         }
     }
@@ -2153,11 +2297,11 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
     /**
      * Creates the actual data source instance.  This method only exists so
      * that subclasses can replace the implementation class.
-     *
+     * @return the data source
      * @throws SQLException if unable to create a datasource instance
      */
     protected DataSource createDataSourceInstance() throws SQLException {
-        PoolingDataSource<PoolableConnection> pds = new PoolingDataSource<>(connectionPool);
+        final PoolingDataSource<PoolableConnection> pds = new PoolingDataSource<>(connectionPool);
         pds.setAccessToUnderlyingConnectionAllowed(isAccessToUnderlyingConnectionAllowed());
         return pds;
     }
@@ -2167,10 +2311,11 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
      * so subclasses can replace the default implementation.
      *
      * @param driverConnectionFactory JDBC connection factory
+     * @return the connection factory
      * @throws SQLException if an error occurs creating the PoolableConnectionFactory
      */
     protected PoolableConnectionFactory createPoolableConnectionFactory(
-            ConnectionFactory driverConnectionFactory) throws SQLException {
+            final ConnectionFactory driverConnectionFactory) throws SQLException {
         PoolableConnectionFactory connectionFactory = null;
         try {
             connectionFactory = new PoolableConnectionFactory(driverConnectionFactory, registeredJmxName);
@@ -2183,22 +2328,24 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
             connectionFactory.setDefaultCatalog(defaultCatalog);
             connectionFactory.setCacheState(cacheState);
             connectionFactory.setPoolStatements(poolPreparedStatements);
-            connectionFactory.setMaxOpenPrepatedStatements(maxOpenPreparedStatements);
+            connectionFactory.setMaxOpenPreparedStatements(maxOpenPreparedStatements);
             connectionFactory.setMaxConnLifetimeMillis(maxConnLifetimeMillis);
             connectionFactory.setRollbackOnReturn(getRollbackOnReturn());
             connectionFactory.setEnableAutoCommitOnReturn(getEnableAutoCommitOnReturn());
             connectionFactory.setDefaultQueryTimeout(getDefaultQueryTimeout());
+            connectionFactory.setFastFailValidation(fastFailValidation);
+            connectionFactory.setDisconnectionSqlCodes(disconnectionSqlCodes);
             validateConnectionFactory(connectionFactory);
-        } catch (RuntimeException e) {
+        } catch (final RuntimeException e) {
             throw e;
-        } catch (Exception e) {
+        } catch (final Exception e) {
             throw new SQLException("Cannot create PoolableConnectionFactory (" + e.getMessage() + ")", e);
         }
         return connectionFactory;
     }
 
     protected static void validateConnectionFactory(
-            PoolableConnectionFactory connectionFactory) throws Exception {
+            final PoolableConnectionFactory connectionFactory) throws Exception {
         PoolableConnection conn = null;
         PooledObject<PoolableConnection> p = null;
         try {
@@ -2215,7 +2362,7 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
         }
     }
 
-    protected void log(String message) {
+    protected void log(final String message) {
         if (logWriter != null) {
             logWriter.println(message);
         }
@@ -2232,20 +2379,20 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
             return;
         }
         // Return immediately if no JMX name has been specified
-        String requestedName = getJmxName();
+        final String requestedName = getJmxName();
         if (requestedName == null) {
             return;
         }
         ObjectName oname;
         try {
              oname = new ObjectName(requestedName);
-        } catch (MalformedObjectNameException e) {
+        } catch (final MalformedObjectNameException e) {
             log.warn("The requested JMX name [" + requestedName +
                     "] was not valid and will be ignored.");
             return;
         }
 
-        MBeanServer mbs = ManagementFactory.getPlatformMBeanServer();
+        final MBeanServer mbs = ManagementFactory.getPlatformMBeanServer();
         try {
             mbs.registerMBean(this, oname);
         } catch (InstanceAlreadyExistsException | MBeanRegistrationException
@@ -2255,12 +2402,12 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
     }
 
     @Override
-    public ObjectName preRegister(MBeanServer server, ObjectName name) {
-        String requestedName = getJmxName();
+    public ObjectName preRegister(final MBeanServer server, final ObjectName name) {
+        final String requestedName = getJmxName();
         if (requestedName != null) {
             try {
                 registeredJmxName = new ObjectName(requestedName);
-            } catch (MalformedObjectNameException e) {
+            } catch (final MalformedObjectNameException e) {
                 log.warn("The requested JMX name [" + requestedName +
                         "] was not valid and will be ignored.");
             }
@@ -2272,7 +2419,7 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
     }
 
     @Override
-    public void postRegister(Boolean registrationDone) {
+    public void postRegister(final Boolean registrationDone) {
         // NO-OP
     }
 
@@ -2286,11 +2433,11 @@ public class BasicDataSource implements DataSource, BasicDataSourceMXBean, MBean
         // NO-OP
     }
 
-    private void updateJmxName(GenericObjectPoolConfig config) {
+    private void updateJmxName(final GenericObjectPoolConfig config) {
         if (registeredJmxName == null) {
             return;
         }
-        StringBuilder base = new StringBuilder(registeredJmxName.toString());
+        final StringBuilder base = new StringBuilder(registeredJmxName.toString());
         base.append(Constants.JMX_CONNECTION_POOL_BASE_EXT);
         config.setJmxNameBase(base.toString());
         config.setJmxNamePrefix(Constants.JMX_CONNECTION_POOL_PREFIX);
