@@ -30,14 +30,6 @@ import java.nio.channels.AsynchronousSocketChannel;
  * and are currently only working for the Nio connector
  */
 public class SocketProperties {
-    /**
-     * Enable/disable socket wrapper cache, this bounded cache stores
-     * SocketWrapper objects to reduce GC
-     * Default is 500
-     * -1 is unlimited
-     * 0 is disabled
-     */
-    protected int socketWrapperCache = 500;
 
     /**
      * Enable/disable socket processor cache, this bounded cache stores
@@ -60,13 +52,13 @@ public class SocketProperties {
 
     /**
      * Enable/disable direct buffers for the network buffers
-     * Default value is enabled
+     * Default value is disabled
      */
     protected boolean directBuffer = false;
 
     /**
      * Enable/disable direct buffers for the network buffers for SSL
-     * Default value is enabled
+     * Default value is disabled
      */
     protected boolean directSslBuffer = false;
 
@@ -144,7 +136,7 @@ public class SocketProperties {
     /**
      * SO_TIMEOUT option. default is 20000.
      */
-    protected Integer soTimeout = new Integer(20000);
+    protected Integer soTimeout = Integer.valueOf(20000);
 
     /**
      * Performance preferences according to
@@ -312,14 +304,6 @@ public class SocketProperties {
         return eventCache;
     }
 
-    public int getKeyCache() {
-        return socketWrapperCache;
-    }
-
-    public int getSocketWrapperCache() {
-        return socketWrapperCache;
-    }
-
     public int getAppReadBufSize() {
         return appReadBufSize;
     }
@@ -407,14 +391,6 @@ public class SocketProperties {
 
     public void setEventCache(int eventCache) {
         this.eventCache = eventCache;
-    }
-
-    public void setSocketWrapperCache(int socketWrapperCache) {
-        this.socketWrapperCache = socketWrapperCache;
-    }
-
-    public void setKeyCache(int keyCache) {
-        this.socketWrapperCache = keyCache;
     }
 
     public void setAppReadBufSize(int appReadBufSize) {
