@@ -53,7 +53,7 @@ public class AsyncChannelWrapperSecure implements AsyncChannelWrapper {
     private static final StringManager sm =
             StringManager.getManager(AsyncChannelWrapperSecure.class);
 
-    private static final ByteBuffer DUMMY = ByteBuffer.allocate(8192);
+    private static final ByteBuffer DUMMY = ByteBuffer.allocate(16921);
     private final AsynchronousSocketChannel socketChannel;
     private final SSLEngine sslEngine;
     private final ByteBuffer socketReadBuffer;
@@ -236,6 +236,7 @@ public class AsyncChannelWrapperSecure implements AsyncChannelWrapper {
                             "asyncChannelWrapperSecure.wrongStateWrite")));
                 }
             } catch (Exception e) {
+                writing.set(false);
                 future.fail(e);
             }
         }
@@ -263,8 +264,8 @@ public class AsyncChannelWrapperSecure implements AsyncChannelWrapper {
                     socketReadBuffer.compact();
 
                     if (forceRead) {
-                        Future<Integer> f =
-                                socketChannel.read(socketReadBuffer);
+                        forceRead = false;
+                        Future<Integer> f = socketChannel.read(socketReadBuffer);
                         Integer socketRead = f.get();
                         if (socketRead.intValue() == -1) {
                             throw new EOFException(sm.getString(
@@ -335,6 +336,7 @@ public class AsyncChannelWrapperSecure implements AsyncChannelWrapper {
                             "asyncChannelWrapperSecure.wrongStateRead")));
                 }
             } catch (Exception e) {
+                reading.set(false);
                 future.fail(e);
             }
         }
@@ -403,8 +405,9 @@ public class AsyncChannelWrapperSecure implements AsyncChannelWrapper {
                             handshaking = false;
                             break;
                         }
-                        default: {
-                            throw new SSLException("TODO");
+                        case NOT_HANDSHAKING: {
+                            throw new SSLException(
+                                    sm.getString("asyncChannelWrapperSecure.notHandshaking"));
                         }
                     }
                 }
@@ -424,13 +427,14 @@ public class AsyncChannelWrapperSecure implements AsyncChannelWrapper {
 
             if (resultStatus != Status.OK &&
                     (wrap || resultStatus != Status.BUFFER_UNDERFLOW)) {
-                throw new SSLException("TODO");
+                throw new SSLException(
+                        sm.getString("asyncChannelWrapperSecure.check.notOk", resultStatus));
             }
             if (wrap && result.bytesConsumed() != 0) {
-                throw new SSLException("TODO");
+                throw new SSLException(sm.getString("asyncChannelWrapperSecure.check.wrap"));
             }
             if (!wrap && result.bytesProduced() != 0) {
-                throw new SSLException("TODO");
+                throw new SSLException(sm.getString("asyncChannelWrapperSecure.check.unwrap"));
             }
         }
     }
@@ -541,7 +545,7 @@ public class AsyncChannelWrapperSecure implements AsyncChannelWrapper {
                 throw new ExecutionException(sm.getString(
                         "asyncChannelWrapperSecure.tooBig", result), null);
             }
-            return new Integer(result.intValue());
+            return Integer.valueOf(result.intValue());
         }
 
         @Override
@@ -553,7 +557,7 @@ public class AsyncChannelWrapperSecure implements AsyncChannelWrapper {
                 throw new ExecutionException(sm.getString(
                         "asyncChannelWrapperSecure.tooBig", result), null);
             }
-            return new Integer(result.intValue());
+            return Integer.valueOf(result.intValue());
         }
     }
 
