@@ -69,7 +69,7 @@ public class Util {
 
 
     static boolean isControl(byte opCode) {
-        return (opCode & 0x08) > 0;
+        return (opCode & 0x08) != 0;
     }
 
 
@@ -85,7 +85,7 @@ public class Util {
 
     static CloseCode getCloseCode(int code) {
         if (code > 2999 && code < 5000) {
-            return CloseCodes.NORMAL_CLOSURE;
+            return CloseCodes.getCloseCode(code);
         }
         switch (code) {
             case 1000:
@@ -207,6 +207,10 @@ public class Util {
         @SuppressWarnings("unchecked")
         Class<? extends T> superClazz =
                 (Class<? extends T>) clazz.getSuperclass();
+        if (superClazz == null) {
+            // Finished looking up the class hierarchy without finding anything
+            return null;
+        }
 
         TypeResult superClassTypeResult = getGenericType(type, superClazz);
         int dimension = superClassTypeResult.getDimension();
@@ -327,7 +331,7 @@ public class Util {
 
 
     public static List<DecoderEntry> getDecoders(
-            Class<? extends Decoder>[] decoderClazzes)
+            List<Class<? extends Decoder>> decoderClazzes)
                     throws DeploymentException{
 
         List<DecoderEntry> result = new ArrayList<>();
@@ -338,8 +342,8 @@ public class Util {
                 @SuppressWarnings("unused")
                 Decoder instance;
                 try {
-                    instance = decoderClazz.newInstance();
-                } catch (InstantiationException | IllegalAccessException e) {
+                    instance = decoderClazz.getConstructor().newInstance();
+                } catch (ReflectiveOperationException e) {
                     throw new DeploymentException(
                             sm.getString("pojoMethodMapping.invalidDecoder",
                                     decoderClazz.getName()), e);
@@ -460,9 +464,7 @@ public class Util {
         try {
             List<Class<? extends Decoder>> decoders =
                     endpointConfig.getDecoders();
-            @SuppressWarnings("unchecked")
-            List<DecoderEntry> decoderEntries = getDecoders(
-                    decoders.toArray(new Class[decoders.size()]));
+            List<DecoderEntry> decoderEntries = getDecoders(decoders);
             decoderMatch = new DecoderMatch(target, decoderEntries);
         } catch (DeploymentException e) {
             throw new IllegalArgumentException(e);
